#9 Updated NST- NSV classes

--- a/docs/api-reference/CRMScript.Native.Category.yml
+++ b/docs/api-reference/CRMScript.Native.Category.yml
@@ -44,7 +44,7 @@ items:
   fullName: CRMScript.Native.Category.getValue(String)
   type: Method
   summary: "\nRetrieves the value of the given field in the category.\n"
-  remarks: "\nAvailable fields: id: The ID of the category; parent: The ID of the parent category; name: The name of the category; fullname: The full name of the category (such as &quot;Support/Product A/bugs&quot;); externalName: The external name of the category; categoryMaster: The ID of the category master; children: A comma separated list of children IDs; notificationEmail: The value of the email Notification field\n"
+  remarks: "\nAvailable fields: id: The ID of the category; parent: The ID of the parent category; name: The name of the category; fullname: The full name of the category (such as &quot;Support/Product A/bugs&quot;); externalName: The external name of the category; categoryMaster: The ID of the category master; children: A comma-separated list of children IDs; notificationEmail: The value of the email Notification field\n"
   syntax: 
     content: String getValue(String field)
     parameters:
@@ -109,7 +109,7 @@ items:
   fullName: CRMScript.Native.Category.setValue(String,String)
   type: Method
   summary: "\nSets the value of the given field for the category.\n"
-  remarks: "\nAvailable fields: parent: The ID of the parent category; name: The name of the category; externalName: The external name of the category; categoryMaster: The ID of the category master; children: A comma separated list of children IDs; notificationEmail: The value of the email Notification field\n"
+  remarks: "\nAvailable fields: parent: The ID of the parent category; name: The name of the category; externalName: The external name of the category; categoryMaster: The ID of the category master; children: A comma-separated list of children IDs; notificationEmail: The value of the email Notification field\n"
   syntax: 
     content: Void SetValue(String name, String value)
     parameters:
