--- a/docs/api-reference/CRMScript.NetServer.NSTabOrder.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTabOrder.yml
@@ -6,11 +6,11 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSTabOrder.#ctor
   - CRMScript.NetServer.NSTabOrder.GetAssociateId()
   - CRMScript.NetServer.NSTabOrder.GetOrder()
   - CRMScript.NetServer.NSTabOrder.GetTabName()
   - CRMScript.NetServer.NSTabOrder.GetTabOrderId()
-  - CRMScript.NetServer.NSTabOrder.#ctor
   - CRMScript.NetServer.NSTabOrder.SetAssociateId(Integer)
   - CRMScript.NetServer.NSTabOrder.SetOrder(String)
   - CRMScript.NetServer.NSTabOrder.SetTabName(String)
@@ -21,86 +21,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSTabOrder.GetAssociateId()
-  commentId: M:CRMScript.NetServer.NSTabOrder.GetAssociateId()
-  id: 'GetAssociateId()'
-  so.intellisense: NSTabOrder.GetAssociateId
-  langs:
-  - crmscript
-  name: 'GetAssociateId()'
-  nameWithType: NSTabOrder.GetAssociateId()
-  fullName: CRMScript.NetServer.NSTabOrder.GetAssociateId()
-  type: Method
-  summary: "\nAssociate who owns this tab order\n"
-  remarks: 
-  syntax: 
-    content: Integer GetAssociateId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSTabOrder thing;\nInteger associateId = thing.GetAssociateId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTabOrder.GetOrder()
-  commentId: M:CRMScript.NetServer.NSTabOrder.GetOrder()
-  id: 'GetOrder()'
-  so.intellisense: NSTabOrder.GetOrder
-  langs:
-  - crmscript
-  name: 'GetOrder()'
-  nameWithType: NSTabOrder.GetOrder()
-  fullName: CRMScript.NetServer.NSTabOrder.GetOrder()
-  type: Method
-  summary: "\nThe actual tab order\n"
-  remarks: 
-  syntax: 
-    content: String GetOrder()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTabOrder thing;\nString order = thing.GetOrder();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTabOrder.GetTabName()
-  commentId: M:CRMScript.NetServer.NSTabOrder.GetTabName()
-  id: 'GetTabName()'
-  so.intellisense: NSTabOrder.GetTabName
-  langs:
-  - crmscript
-  name: 'GetTabName()'
-  nameWithType: NSTabOrder.GetTabName()
-  fullName: CRMScript.NetServer.NSTabOrder.GetTabName()
-  type: Method
-  summary: "\nName of tab control\n"
-  remarks: 
-  syntax: 
-    content: String GetTabName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTabOrder thing;\nString tabName = thing.GetTabName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTabOrder.GetTabOrderId()
-  commentId: M:CRMScript.NetServer.NSTabOrder.GetTabOrderId()
-  id: 'GetTabOrderId()'
-  so.intellisense: NSTabOrder.GetTabOrderId
-  langs:
-  - crmscript
-  name: 'GetTabOrderId()'
-  nameWithType: NSTabOrder.GetTabOrderId()
-  fullName: CRMScript.NetServer.NSTabOrder.GetTabOrderId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetTabOrderId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSTabOrder thing;\nInteger tabOrderId = thing.GetTabOrderId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTabOrder.#ctor
   commentId: M:CRMScript.NetServer.NSTabOrder.#ctor
   id: '#ctor'
@@ -116,6 +36,86 @@ items:
   syntax: 
     content: NSTabOrder
   example: 
+- uid: CRMScript.NetServer.NSTabOrder.GetAssociateId()
+  commentId: M:CRMScript.NetServer.NSTabOrder.GetAssociateId()
+  id: 'GetAssociateId()'
+  so.intellisense: NSTabOrder.GetAssociateId
+  langs:
+  - crmscript
+  name: 'GetAssociateId()'
+  nameWithType: NSTabOrder.GetAssociateId()
+  fullName: CRMScript.NetServer.NSTabOrder.GetAssociateId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetAssociateId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Associate who owns this tab order
+  example: 
+  - "\n<pre><code>NSTabOrder thing;\nInteger associateId = thing.GetAssociateId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTabOrder.GetOrder()
+  commentId: M:CRMScript.NetServer.NSTabOrder.GetOrder()
+  id: 'GetOrder()'
+  so.intellisense: NSTabOrder.GetOrder
+  langs:
+  - crmscript
+  name: 'GetOrder()'
+  nameWithType: NSTabOrder.GetOrder()
+  fullName: CRMScript.NetServer.NSTabOrder.GetOrder()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetOrder()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The actual tab order
+  example: 
+  - "\n<pre><code>NSTabOrder thing;\nString order = thing.GetOrder();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTabOrder.GetTabName()
+  commentId: M:CRMScript.NetServer.NSTabOrder.GetTabName()
+  id: 'GetTabName()'
+  so.intellisense: NSTabOrder.GetTabName
+  langs:
+  - crmscript
+  name: 'GetTabName()'
+  nameWithType: NSTabOrder.GetTabName()
+  fullName: CRMScript.NetServer.NSTabOrder.GetTabName()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetTabName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Name of tab control
+  example: 
+  - "\n<pre><code>NSTabOrder thing;\nString tabName = thing.GetTabName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTabOrder.GetTabOrderId()
+  commentId: M:CRMScript.NetServer.NSTabOrder.GetTabOrderId()
+  id: 'GetTabOrderId()'
+  so.intellisense: NSTabOrder.GetTabOrderId
+  langs:
+  - crmscript
+  name: 'GetTabOrderId()'
+  nameWithType: NSTabOrder.GetTabOrderId()
+  fullName: CRMScript.NetServer.NSTabOrder.GetTabOrderId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetTabOrderId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSTabOrder thing;\nInteger tabOrderId = thing.GetTabOrderId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTabOrder.SetAssociateId(Integer)
   commentId: M:CRMScript.NetServer.NSTabOrder.SetAssociateId(Integer)
   id: 'SetAssociateId(Integer)'
@@ -126,14 +126,14 @@ items:
   nameWithType: NSTabOrder.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSTabOrder.SetAssociateId(Integer)
   type: Method
-  summary: "\nAssociate who owns this tab order\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
     parameters:
     - id: associateId
       type: CRMScript.Global.Integer
-      description: 
+      description: Associate who owns this tab order
     return:
       type: CRMScript.Global.Void
   example: 
@@ -148,14 +148,14 @@ items:
   nameWithType: NSTabOrder.SetOrder(String)
   fullName: CRMScript.NetServer.NSTabOrder.SetOrder(String)
   type: Method
-  summary: "\nThe actual tab order\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetOrder(String order)
     parameters:
     - id: order
       type: CRMScript.Global.String
-      description: 
+      description: The actual tab order
     return:
       type: CRMScript.Global.Void
   example: 
@@ -170,14 +170,14 @@ items:
   nameWithType: NSTabOrder.SetTabName(String)
   fullName: CRMScript.NetServer.NSTabOrder.SetTabName(String)
   type: Method
-  summary: "\nName of tab control\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetTabName(String tabName)
     parameters:
     - id: tabName
       type: CRMScript.Global.String
-      description: 
+      description: Name of tab control
     return:
       type: CRMScript.Global.Void
   example: 
@@ -192,14 +192,14 @@ items:
   nameWithType: NSTabOrder.SetTabOrderId(Integer)
   fullName: CRMScript.NetServer.NSTabOrder.SetTabOrderId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetTabOrderId(Integer tabOrderId)
     parameters:
     - id: tabOrderId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
