--- a/docs/api-reference/CRMScript.NetServer.NSTag.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTag.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSTag.#ctor
   - CRMScript.NetServer.NSTag.GetId()
   - CRMScript.NetServer.NSTag.GetName()
   - CRMScript.NetServer.NSTag.GetToolTip()
-  - CRMScript.NetServer.NSTag.#ctor
   - CRMScript.NetServer.NSTag.SetId(Integer)
   - CRMScript.NetServer.NSTag.SetName(String)
   - CRMScript.NetServer.NSTag.SetToolTip(String)
@@ -19,66 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSTag.GetId()
-  commentId: M:CRMScript.NetServer.NSTag.GetId()
-  id: 'GetId()'
-  so.intellisense: NSTag.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSTag.GetId()
-  fullName: CRMScript.NetServer.NSTag.GetId()
-  type: Method
-  summary: "\nThe ID of the ListItem\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSTag thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTag.GetName()
-  commentId: M:CRMScript.NetServer.NSTag.GetName()
-  id: 'GetName()'
-  so.intellisense: NSTag.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSTag.GetName()
-  fullName: CRMScript.NetServer.NSTag.GetName()
-  type: Method
-  summary: "\nThe name of the ListItem\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTag thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTag.GetToolTip()
-  commentId: M:CRMScript.NetServer.NSTag.GetToolTip()
-  id: 'GetToolTip()'
-  so.intellisense: NSTag.GetToolTip
-  langs:
-  - crmscript
-  name: 'GetToolTip()'
-  nameWithType: NSTag.GetToolTip()
-  fullName: CRMScript.NetServer.NSTag.GetToolTip()
-  type: Method
-  summary: "\nThe tooltip of the ListItem\n"
-  remarks: 
-  syntax: 
-    content: String GetToolTip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTag thing;\nString toolTip = thing.GetToolTip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTag.#ctor
   commentId: M:CRMScript.NetServer.NSTag.#ctor
   id: '#ctor'
@@ -94,6 +34,66 @@ items:
   syntax: 
     content: NSTag
   example: 
+- uid: CRMScript.NetServer.NSTag.GetId()
+  commentId: M:CRMScript.NetServer.NSTag.GetId()
+  id: 'GetId()'
+  so.intellisense: NSTag.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSTag.GetId()
+  fullName: CRMScript.NetServer.NSTag.GetId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The ID of the ListItem
+  example: 
+  - "\n<pre><code>NSTag thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTag.GetName()
+  commentId: M:CRMScript.NetServer.NSTag.GetName()
+  id: 'GetName()'
+  so.intellisense: NSTag.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSTag.GetName()
+  fullName: CRMScript.NetServer.NSTag.GetName()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the ListItem
+  example: 
+  - "\n<pre><code>NSTag thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTag.GetToolTip()
+  commentId: M:CRMScript.NetServer.NSTag.GetToolTip()
+  id: 'GetToolTip()'
+  so.intellisense: NSTag.GetToolTip
+  langs:
+  - crmscript
+  name: 'GetToolTip()'
+  nameWithType: NSTag.GetToolTip()
+  fullName: CRMScript.NetServer.NSTag.GetToolTip()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetToolTip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The tooltip of the ListItem
+  example: 
+  - "\n<pre><code>NSTag thing;\nString toolTip = thing.GetToolTip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTag.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSTag.SetId(Integer)
   id: 'SetId(Integer)'
@@ -104,14 +104,14 @@ items:
   nameWithType: NSTag.SetId(Integer)
   fullName: CRMScript.NetServer.NSTag.SetId(Integer)
   type: Method
-  summary: "\nThe ID of the ListItem\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetId(Integer id)
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: 
+      description:  The ID of the ListItem
     return:
       type: CRMScript.Global.Void
   example: 
@@ -126,14 +126,14 @@ items:
   nameWithType: NSTag.SetName(String)
   fullName: CRMScript.NetServer.NSTag.SetName(String)
   type: Method
-  summary: "\nThe name of the ListItem\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of the ListItem
     return:
       type: CRMScript.Global.Void
   example: 
@@ -148,14 +148,14 @@ items:
   nameWithType: NSTag.SetToolTip(String)
   fullName: CRMScript.NetServer.NSTag.SetToolTip(String)
   type: Method
-  summary: "\nThe tooltip of the ListItem\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetToolTip(String toolTip)
     parameters:
     - id: toolTip
       type: CRMScript.Global.String
-      description: 
+      description: The tooltip of the ListItem
     return:
       type: CRMScript.Global.Void
   example: 
