--- a/docs/api-reference/CRMScript.NetServer.NSTimeZoneAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTimeZoneAgent.yml
@@ -6,12 +6,12 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSTimeZoneAgent.#ctor
   - CRMScript.NetServer.NSTimeZoneAgent.CheckNewTimeZoneDataAvailable()
   - CRMScript.NetServer.NSTimeZoneAgent.DeleteTimeZones()
   - CRMScript.NetServer.NSTimeZoneAgent.GetBaseTimeZoneId()
   - CRMScript.NetServer.NSTimeZoneAgent.GetDefaultTimeZonePreference()
   - CRMScript.NetServer.NSTimeZoneAgent.InitializeTimeZoneData()
-  - CRMScript.NetServer.NSTimeZoneAgent.#ctor
   - CRMScript.NetServer.NSTimeZoneAgent.SetActiveTimeZoneRow(Integer,Bool)
   - CRMScript.NetServer.NSTimeZoneAgent.SetActiveTimeZonesByFilter(String,Bool)
   - CRMScript.NetServer.NSTimeZoneAgent.SetBaseTimeZoneId(Integer)
@@ -23,6 +23,22 @@ items:
   fullName: CRMScript.NetServer.NSTimeZoneAgent
   type: Class
   summary: "\nTimeZone maintenance.\n"
+  example: 
+  - "\n<pre><code>NSTimeZoneAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
+- uid: CRMScript.NetServer.NSTimeZoneAgent.#ctor
+  commentId: M:CRMScript.NetServer.NSTimeZoneAgent.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSTimeZoneAgent
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSTimeZoneAgent.#ctor
+  fullName: CRMScript.NetServer.NSTimeZoneAgent.#ctor
+  type: Constructor
+  summary: "\nTimeZone maintenance.\n"
+  remarks: 
+  syntax: 
+    content: NSTimeZoneAgent
   example: 
   - "\n<pre><code>NSTimeZoneAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSTimeZoneAgent.CheckNewTimeZoneDataAvailable()
@@ -73,7 +89,7 @@ items:
   nameWithType: NSTimeZoneAgent.GetBaseTimeZoneId()
   fullName: CRMScript.NetServer.NSTimeZoneAgent.GetBaseTimeZoneId()
   type: Method
-  summary: "\nGets the base timezone id.\n"
+  summary: "\nGets the base timezone ID.\n"
   remarks: 
   syntax: 
     content: Integer GetBaseTimeZoneId()
@@ -113,7 +129,7 @@ items:
   nameWithType: NSTimeZoneAgent.InitializeTimeZoneData()
   fullName: CRMScript.NetServer.NSTimeZoneAgent.InitializeTimeZoneData()
   type: Method
-  summary: "\nInitalizes the NSTimeZoneData\n"
+  summary: "\nInitializes the NSTimeZoneData\n"
   remarks: 
   syntax: 
     content: NSTimeZoneData[] InitializeTimeZoneData()
@@ -121,22 +137,6 @@ items:
     return:
       type: CRMScript.NetServer.NSTimeZoneData[]
   example: 
-- uid: CRMScript.NetServer.NSTimeZoneAgent.#ctor
-  commentId: M:CRMScript.NetServer.NSTimeZoneAgent.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSTimeZoneAgent
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSTimeZoneAgent.#ctor
-  fullName: CRMScript.NetServer.NSTimeZoneAgent.#ctor
-  type: Constructor
-  summary: "\nTimeZone maintenance.\n"
-  remarks: 
-  syntax: 
-    content: NSTimeZoneAgent
-  example: 
-  - "\n<pre><code>NSTimeZoneAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSTimeZoneAgent.SetActiveTimeZoneRow(Integer,Bool)
   commentId: M:CRMScript.NetServer.NSTimeZoneAgent.SetActiveTimeZoneRow(Integer,Bool)
   id: 'SetActiveTimeZoneRow(Integer,Bool)'
@@ -195,7 +195,7 @@ items:
   nameWithType: NSTimeZoneAgent.SetBaseTimeZoneId(Integer)
   fullName: CRMScript.NetServer.NSTimeZoneAgent.SetBaseTimeZoneId(Integer)
   type: Method
-  summary: "\nSets the base timezone id.<p></p>\n<strong>Returns:</strong>Bool\n"
+  summary: "\nSets the base timezone ID.\n"
   remarks: 
   syntax: 
     content: Bool SetBaseTimeZoneId(Integer timezoneId)
@@ -259,7 +259,7 @@ items:
   nameWithType: NSTimeZoneAgent.UpdateTimeZoneData()
   fullName: CRMScript.NetServer.NSTimeZoneAgent.UpdateTimeZoneData()
   type: Method
-  summary: "\nRetrieve time zone data from the SuperOffice server and update TimeZone data in the database\n"
+  summary: "\nRetrieves time zone data from the SuperOffice server and update TimeZone data in the database\n"
   remarks: 
   syntax: 
     content: Bool UpdateTimeZoneData()
