--- a/docs/api-reference/CRMScript.NetServer.NSTypicalSearches.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTypicalSearches.yml
@@ -6,14 +6,14 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSTypicalSearches.#ctor
   - CRMScript.NetServer.NSTypicalSearches.GetDeleteLeftovers()
   - CRMScript.NetServer.NSTypicalSearches.GetMasterVersion()
   - CRMScript.NetServer.NSTypicalSearches.GetSearches()
   - CRMScript.NetServer.NSTypicalSearches.GetSource()
-  - CRMScript.NetServer.NSTypicalSearches.#ctor
   - CRMScript.NetServer.NSTypicalSearches.SetDeleteLeftovers(Bool)
   - CRMScript.NetServer.NSTypicalSearches.SetMasterVersion(Integer)
-  - CRMScript.NetServer.NSTypicalSearches.SetSearches()
+  - CRMScript.NetServer.NSTypicalSearches.SetSearches(NSTypicalSearch[])
   - CRMScript.NetServer.NSTypicalSearches.SetSource(String)
   name: NSTypicalSearches
   nameWithType: NSTypicalSearches
@@ -21,85 +21,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSTypicalSearches.GetDeleteLeftovers()
-  commentId: M:CRMScript.NetServer.NSTypicalSearches.GetDeleteLeftovers()
-  id: 'GetDeleteLeftovers()'
-  so.intellisense: NSTypicalSearches.GetDeleteLeftovers
-  langs:
-  - crmscript
-  name: 'GetDeleteLeftovers()'
-  nameWithType: NSTypicalSearches.GetDeleteLeftovers()
-  fullName: CRMScript.NetServer.NSTypicalSearches.GetDeleteLeftovers()
-  type: Method
-  summary: "\nIf true, then any TypicalSearch records in the database that are NOT referenced in this call, should be deleted\n"
-  remarks: 
-  syntax: 
-    content: Bool GetDeleteLeftovers()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSTypicalSearches thing;\nBool deleteLeftovers = thing.GetDeleteLeftovers();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTypicalSearches.GetMasterVersion()
-  commentId: M:CRMScript.NetServer.NSTypicalSearches.GetMasterVersion()
-  id: 'GetMasterVersion()'
-  so.intellisense: NSTypicalSearches.GetMasterVersion
-  langs:
-  - crmscript
-  name: 'GetMasterVersion()'
-  nameWithType: NSTypicalSearches.GetMasterVersion()
-  fullName: CRMScript.NetServer.NSTypicalSearches.GetMasterVersion()
-  type: Method
-  summary: "\nThe master version number in this update, at least the highest of those in the searches, but can be higher to force an update (and delete of missing elements)\n"
-  remarks: 
-  syntax: 
-    content: Integer GetMasterVersion()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSTypicalSearches thing;\nInteger masterVersion = thing.GetMasterVersion();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTypicalSearches.GetSearches()
-  commentId: M:CRMScript.NetServer.NSTypicalSearches.GetSearches()
-  id: 'GetSearches()'
-  so.intellisense: NSTypicalSearches.GetSearches
-  langs:
-  - crmscript
-  name: 'GetSearches()'
-  nameWithType: NSTypicalSearches.GetSearches()
-  fullName: CRMScript.NetServer.NSTypicalSearches.GetSearches()
-  type: Method
-  summary: "\nThe TypicalSearch structures (including criteria) to import<p></p>\n<strong>Returns:</strong>NSTypicalSearch[]<p></p>\n<pre><code>NSTypicalSearches thing;\nNSTypicalSearch[] searches = thing.GetSearches();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSTypicalSearch[] GetSearches()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSTypicalSearch[]
-  example: 
-  - "\n<pre><code>NSTypicalSearches thing;\nNSTypicalSearch[] searches = thing.GetSearches();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTypicalSearches.GetSource()
-  commentId: M:CRMScript.NetServer.NSTypicalSearches.GetSource()
-  id: 'GetSource()'
-  so.intellisense: NSTypicalSearches.GetSource
-  langs:
-  - crmscript
-  name: 'GetSource()'
-  nameWithType: NSTypicalSearches.GetSource()
-  fullName: CRMScript.NetServer.NSTypicalSearches.GetSource()
-  type: Method
-  summary: "\nName of organization that sources and maintains this TypicalSearch. Allows for both SuperOffice and partners to maintain sets of typical searches without conflict\n"
-  remarks: 
-  syntax: 
-    content: String GetSource()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTypicalSearches thing;\nString source = thing.GetSource();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTypicalSearches.#ctor
   commentId: M:CRMScript.NetServer.NSTypicalSearches.#ctor
   id: '#ctor'
@@ -115,6 +36,86 @@ items:
   syntax: 
     content: NSTypicalSearches
   example: 
+- uid: CRMScript.NetServer.NSTypicalSearches.GetDeleteLeftovers()
+  commentId: M:CRMScript.NetServer.NSTypicalSearches.GetDeleteLeftovers()
+  id: 'GetDeleteLeftovers()'
+  so.intellisense: NSTypicalSearches.GetDeleteLeftovers
+  langs:
+  - crmscript
+  name: 'GetDeleteLeftovers()'
+  nameWithType: NSTypicalSearches.GetDeleteLeftovers()
+  fullName: CRMScript.NetServer.NSTypicalSearches.GetDeleteLeftovers()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Bool GetDeleteLeftovers()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: If true, then any TypicalSearch records in the database that are NOT referenced in this call, should be deleted
+  example: 
+  - "\n<pre><code>NSTypicalSearches thing;\nBool deleteLeftovers = thing.GetDeleteLeftovers();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTypicalSearches.GetMasterVersion()
+  commentId: M:CRMScript.NetServer.NSTypicalSearches.GetMasterVersion()
+  id: 'GetMasterVersion()'
+  so.intellisense: NSTypicalSearches.GetMasterVersion
+  langs:
+  - crmscript
+  name: 'GetMasterVersion()'
+  nameWithType: NSTypicalSearches.GetMasterVersion()
+  fullName: CRMScript.NetServer.NSTypicalSearches.GetMasterVersion()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetMasterVersion()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The master version number in this update, at least the highest of those in the searches, but can be higher to force an update (and delete of missing elements)
+  example: 
+  - "\n<pre><code>NSTypicalSearches thing;\nInteger masterVersion = thing.GetMasterVersion();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTypicalSearches.GetSearches()
+  commentId: M:CRMScript.NetServer.NSTypicalSearches.GetSearches()
+  id: 'GetSearches()'
+  so.intellisense: NSTypicalSearches.GetSearches
+  langs:
+  - crmscript
+  name: 'GetSearches()'
+  nameWithType: NSTypicalSearches.GetSearches()
+  fullName: CRMScript.NetServer.NSTypicalSearches.GetSearches()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSTypicalSearch[] GetSearches()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSTypicalSearch[]
+      description: The TypicalSearch structures (including criteria) to import
+  example: 
+  - "\n<pre><code>NSTypicalSearches thing;\nNSTypicalSearch[] searches = thing.GetSearches();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTypicalSearches.GetSource()
+  commentId: M:CRMScript.NetServer.NSTypicalSearches.GetSource()
+  id: 'GetSource()'
+  so.intellisense: NSTypicalSearches.GetSource
+  langs:
+  - crmscript
+  name: 'GetSource()'
+  nameWithType: NSTypicalSearches.GetSource()
+  fullName: CRMScript.NetServer.NSTypicalSearches.GetSource()
+  type: Method
+  summary: ""
+  remarks: "\nAllows for both SuperOffice and partners to maintain sets of typical searches without conflict\n"
+  syntax: 
+    content: String GetSource()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Name of organization that sources and maintains this TypicalSearch.
+  example: 
+  - "\n<pre><code>NSTypicalSearches thing;\nString source = thing.GetSource();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTypicalSearches.SetDeleteLeftovers(Bool)
   commentId: M:CRMScript.NetServer.NSTypicalSearches.SetDeleteLeftovers(Bool)
   id: 'SetDeleteLeftovers(Bool)'
@@ -125,14 +126,14 @@ items:
   nameWithType: NSTypicalSearches.SetDeleteLeftovers(Bool)
   fullName: CRMScript.NetServer.NSTypicalSearches.SetDeleteLeftovers(Bool)
   type: Method
-  summary: "\nIf true, then any TypicalSearch records in the database that are NOT referenced in this call, should be deleted\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetDeleteLeftovers(Bool deleteLeftovers)
     parameters:
     - id: deleteLeftovers
       type: CRMScript.Global.Bool
-      description: 
+      description: If true, then any TypicalSearch records in the database that are NOT referenced in this call, should be deleted
     return:
       type: CRMScript.Global.Void
   example: 
@@ -147,33 +148,38 @@ items:
   nameWithType: NSTypicalSearches.SetMasterVersion(Integer)
   fullName: CRMScript.NetServer.NSTypicalSearches.SetMasterVersion(Integer)
   type: Method
-  summary: "\nThe master version number in this update, at least the highest of those in the searches, but can be higher to force an update (and delete of missing elements)\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetMasterVersion(Integer masterVersion)
     parameters:
     - id: masterVersion
       type: CRMScript.Global.Integer
-      description: 
+      description:  The master version number in this update, at least the highest of those in the searches, but can be higher to force an update (and delete of missing elements)
     return:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSTypicalSearches thing;\nInteger masterVersion;\nthing.SetMasterVersion(masterVersion);</code></pre>\n"
-- uid: CRMScript.NetServer.NSTypicalSearches.SetSearches()
-  commentId: M:CRMScript.NetServer.NSTypicalSearches.SetSearches()
-  id: 'SetSearches()'
+- uid: CRMScript.NetServer.NSTypicalSearches.SetSearches(NSTypicalSearch[])
+  commentId: M:CRMScript.NetServer.NSTypicalSearches.SetSearches(NSTypicalSearch[])
+  id: 'SetSearches(NSTypicalSearch[])'
   so.intellisense: NSTypicalSearches.SetSearches
   langs:
   - crmscript
-  name: 'SetSearches()'
-  nameWithType: NSTypicalSearches.SetSearches()
-  fullName: CRMScript.NetServer.NSTypicalSearches.SetSearches()
+  name: 'SetSearches(NSTypicalSearch[])'
+  nameWithType: NSTypicalSearches.SetSearches(NSTypicalSearch[])
+  fullName: CRMScript.NetServer.NSTypicalSearches.SetSearches(NSTypicalSearch[])
   type: Method
-  summary: "\nThe TypicalSearch structures (including criteria) to import\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetSearches(NSTypicalSearch[] searches)
     parameters:
+    - id: searches
+      type: CRMScript.NetServer.NSTypicalSearch[]
+      description: The TypicalSearch structures (including criteria) to import
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSTypicalSearches thing;\nNSTypicalSearch[] searches;\nthing.SetSearches(searches);</code></pre>\n"
 - uid: CRMScript.NetServer.NSTypicalSearches.SetSource(String)
@@ -186,14 +192,14 @@ items:
   nameWithType: NSTypicalSearches.SetSource(String)
   fullName: CRMScript.NetServer.NSTypicalSearches.SetSource(String)
   type: Method
-  summary: "\nName of organization that sources and maintains this TypicalSearch. Allows for both SuperOffice and partners to maintain sets of typical searches without conflict\n"
-  remarks: 
+  summary: ""
+  remarks: "\nAllows for both SuperOffice and partners to maintain sets of typical searches without conflict\n"
   syntax: 
     content: Void SetSource(String source)
     parameters:
     - id: source
       type: CRMScript.Global.String
-      description: 
+      description: Name of organization that sources and maintains this TypicalSearch. 
     return:
       type: CRMScript.Global.Void
   example: 
