--- a/docs/api-reference/CRMScript.NetServer.NSVisibleFor.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSVisibleFor.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSVisibleFor.#ctor
   - CRMScript.NetServer.NSVisibleFor.GetDisplayValue()
   - CRMScript.NetServer.NSVisibleFor.GetVisibility()
   - CRMScript.NetServer.NSVisibleFor.GetVisibleId()
-  - CRMScript.NetServer.NSVisibleFor.#ctor
   - CRMScript.NetServer.NSVisibleFor.SetDisplayValue(String)
   - CRMScript.NetServer.NSVisibleFor.SetVisibility(Integer)
   - CRMScript.NetServer.NSVisibleFor.SetVisibleId(Integer)
@@ -18,6 +18,21 @@ items:
   fullName: CRMScript.NetServer.NSVisibleFor
   type: Class
   summary: 
+  example: 
+- uid: CRMScript.NetServer.NSVisibleFor.#ctor
+  commentId: M:CRMScript.NetServer.NSVisibleFor.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSVisibleFor
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSVisibleFor.#ctor
+  fullName: CRMScript.NetServer.NSVisibleFor.#ctor
+  type: Constructor
+  summary: 
+  remarks: 
+  syntax: 
+    content: NSVisibleFor
   example: 
 - uid: CRMScript.NetServer.NSVisibleFor.GetDisplayValue()
   commentId: M:CRMScript.NetServer.NSVisibleFor.GetDisplayValue()
@@ -49,7 +64,7 @@ items:
   nameWithType: NSVisibleFor.GetVisibility()
   fullName: CRMScript.NetServer.NSVisibleFor.GetVisibility()
   type: Method
-  summary: "\n<strong>Returns:</strong>Integer<p></p>\n<ul><li>Enum: 0 = All</li><li>Enum: 1 = Associate</li><li>Enum: 2 = Group</li></ul><pre><code>NSVisibleFor thing;\nInteger visibility = thing.GetVisibility();</code></pre>\n"
+  summary: "\n<ul><li>Enum: 0 = All</li><li>Enum: 1 = Associate</li><li>Enum: 2 = Group</li></ul>\n"
   remarks: 
   syntax: 
     content: Integer GetVisibility()
@@ -79,21 +94,6 @@ items:
       description:
   example: 
   - "\n<pre><code>NSVisibleFor thing;\nInteger visibleId = thing.GetVisibleId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSVisibleFor.#ctor
-  commentId: M:CRMScript.NetServer.NSVisibleFor.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSVisibleFor
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSVisibleFor.#ctor
-  fullName: CRMScript.NetServer.NSVisibleFor.#ctor
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: NSVisibleFor
-  example: 
 - uid: CRMScript.NetServer.NSVisibleFor.SetDisplayValue(String)
   commentId: M:CRMScript.NetServer.NSVisibleFor.SetDisplayValue(String)
   id: 'SetDisplayValue(String)'
@@ -127,13 +127,13 @@ items:
   fullName: CRMScript.NetServer.NSVisibleFor.SetVisibility(Integer)
   type: Method
   summary: 
-  remarks: "\n<p>See enum visibility.</p>\n"
+  remarks: 
   syntax: 
     content: Void SetVisibility(Integer visibility)
     parameters:
     - id: visibility
       type: CRMScript.Global.Integer
-      description: 
+      description: See enum visibility.
     return:
       type: CRMScript.Global.Void
   example: 
