--- a/docs/api-reference/CRMScript.Native.Ticket.yml
+++ b/docs/api-reference/CRMScript.Native.Ticket.yml
@@ -461,7 +461,7 @@ items:
       description: Email address from ticket or customer
     - id: messages
       type: CRMScript.Global.String
-      description: Comma separated list of message id's to forward
+      description: Comma-separated list of message id's to forward
     - id: msgId
       type: CRMScript.Global.Integer
       description: ID of added "forward" message or "-1"
@@ -483,7 +483,7 @@ items:
   fullName: CRMScript.Native.Ticket.setValue(String,String)
   type: Method
   summary: "\nSets column colName to the given value.\nObs: For this to actually affect the ticket, you will have to use the function<code>save()</code>after you have set all the values you want.\n"
-  remarks: "\n<p>Possible values are the extrafields on the ticket and the following:</p><ul><li>title</li><li>category: the category id</li><li>ownedBy: (owned_by), the ID of the user who owns the ticket</li><li>slevel: the security level of the ticket, 1 is internal, 2 is external</li><li>priority: the id</li><li>status: 1 = active, 2 = closed, 3 = postponed, 4 = deleted, 5 = composed</li><li>ticketStatus: (ticket_status), the ID of the custom status field</li><li>custId: the ID of the primary customer</li><li>customers: comma separated list of customer ids</li><li>createdBy: the ID of the user who posted the ticket, 1 if the ticket is posted into the system</li><li>author: a string containing the name of the ticket author</li><li>activate: the datetime when the ticket was activated</li><li>createdAt: (created_at), the datetime when the ticket was created</li><li>repliedAt: (replied_at), the datetime when the ticket first was replied at</li><li>stopEscalation</li><li>readStatus (read_status)</li><li>deadline</li><li>filterAddress</li><li>timeToClose</li><li>realTimeToClose</li><li>dbiAgentId</li><li>dbiKey</li><li>dbiLastModified</li></ul>\n"
+  remarks: "\n<p>Possible values are the extrafields on the ticket and the following:</p><ul><li>title</li><li>category: the category id</li><li>ownedBy: (owned_by), the ID of the user who owns the ticket</li><li>slevel: the security level of the ticket, 1 is internal, 2 is external</li><li>priority: the id</li><li>status: 1 = active, 2 = closed, 3 = postponed, 4 = deleted, 5 = composed</li><li>ticketStatus: (ticket_status), the ID of the custom status field</li><li>custId: the ID of the primary customer</li><li>customers: comma-separated list of customer ids</li><li>createdBy: the ID of the user who posted the ticket, 1 if the ticket is posted into the system</li><li>author: a string containing the name of the ticket author</li><li>activate: the datetime when the ticket was activated</li><li>createdAt: (created_at), the datetime when the ticket was created</li><li>repliedAt: (replied_at), the datetime when the ticket first was replied at</li><li>stopEscalation</li><li>readStatus (read_status)</li><li>deadline</li><li>filterAddress</li><li>timeToClose</li><li>realTimeToClose</li><li>dbiAgentId</li><li>dbiKey</li><li>dbiLastModified</li></ul>\n"
   syntax: 
     content: Void setValue(String colName, String value)
     parameters:
