--- a/docs/api-reference/CRMScript.NetServer.NSTableRight.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTableRight.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSTableRight.#ctor
   - CRMScript.NetServer.NSTableRight.GetMask()
   - CRMScript.NetServer.NSTableRight.GetReason()
   - CRMScript.NetServer.NSTableRight.GetTableRight()
-  - CRMScript.NetServer.NSTableRight.#ctor
   - CRMScript.NetServer.NSTableRight.SetMask(Integer)
   - CRMScript.NetServer.NSTableRight.SetReason(String)
   - CRMScript.NetServer.NSTableRight.SetTableRight(Integer)
@@ -18,60 +18,6 @@ items:
   fullName: CRMScript.NetServer.NSTableRight
   type: Class
   summary: 
-  example: 
-- uid: CRMScript.NetServer.NSTableRight.GetMask()
-  commentId: M:CRMScript.NetServer.NSTableRight.GetMask()
-  id: 'GetMask()'
-  so.intellisense: NSTableRight.GetMask
-  langs:
-  - crmscript
-  name: 'GetMask()'
-  nameWithType: NSTableRight.GetMask()
-  fullName: CRMScript.NetServer.NSTableRight.GetMask()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetMask()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSTableRight.GetReason()
-  commentId: M:CRMScript.NetServer.NSTableRight.GetReason()
-  id: 'GetReason()'
-  so.intellisense: NSTableRight.GetReason
-  langs:
-  - crmscript
-  name: 'GetReason()'
-  nameWithType: NSTableRight.GetReason()
-  fullName: CRMScript.NetServer.NSTableRight.GetReason()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetReason()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSTableRight.GetTableRight()
-  commentId: M:CRMScript.NetServer.NSTableRight.GetTableRight()
-  id: 'GetTableRight()'
-  so.intellisense: NSTableRight.GetTableRight
-  langs:
-  - crmscript
-  name: 'GetTableRight()'
-  nameWithType: NSTableRight.GetTableRight()
-  fullName: CRMScript.NetServer.NSTableRight.GetTableRight()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetTableRight()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSTableRight.#ctor
   commentId: M:CRMScript.NetServer.NSTableRight.#ctor
@@ -88,6 +34,60 @@ items:
   syntax: 
     content: NSTableRight
   example: 
+- uid: CRMScript.NetServer.NSTableRight.GetMask()
+  commentId: M:CRMScript.NetServer.NSTableRight.GetMask()
+  id: 'GetMask()'
+  so.intellisense: NSTableRight.GetMask
+  langs:
+  - crmscript
+  name: 'GetMask()'
+  nameWithType: NSTableRight.GetMask()
+  fullName: CRMScript.NetServer.NSTableRight.GetMask()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetMask()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSTableRight.GetReason()
+  commentId: M:CRMScript.NetServer.NSTableRight.GetReason()
+  id: 'GetReason()'
+  so.intellisense: NSTableRight.GetReason
+  langs:
+  - crmscript
+  name: 'GetReason()'
+  nameWithType: NSTableRight.GetReason()
+  fullName: CRMScript.NetServer.NSTableRight.GetReason()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetReason()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+- uid: CRMScript.NetServer.NSTableRight.GetTableRight()
+  commentId: M:CRMScript.NetServer.NSTableRight.GetTableRight()
+  id: 'GetTableRight()'
+  so.intellisense: NSTableRight.GetTableRight
+  langs:
+  - crmscript
+  name: 'GetTableRight()'
+  nameWithType: NSTableRight.GetTableRight()
+  fullName: CRMScript.NetServer.NSTableRight.GetTableRight()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetTableRight()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
 - uid: CRMScript.NetServer.NSTableRight.SetMask(Integer)
   commentId: M:CRMScript.NetServer.NSTableRight.SetMask(Integer)
   id: 'SetMask(Integer)'
@@ -101,9 +101,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetMask(Integer p_0)
+    content: Void SetMask(Integer mask)
     parameters:
-    - id: p_0
+    - id: mask
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -122,9 +122,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetReason(String p_0)
+    content: Void SetReason(String reason)
     parameters:
-    - id: p_0
+    - id: reason
       type: CRMScript.Global.String
       description: 
     return:
@@ -143,9 +143,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetTableRight(Integer p_0)
+    content: Void SetTableRight(Integer right)
     parameters:
-    - id: p_0
+    - id: right
       type: CRMScript.Global.Integer
       description: 
     return:
