--- a/docs/api-reference/CRMScript.NetServer.NSTemplateInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTemplateInfo.yml
@@ -6,11 +6,11 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSTemplateInfo.#ctor
   - CRMScript.NetServer.NSTemplateInfo.GetDescription()
   - CRMScript.NetServer.NSTemplateInfo.GetExternalReference()
   - CRMScript.NetServer.NSTemplateInfo.GetName()
   - CRMScript.NetServer.NSTemplateInfo.GetPluginId()
-  - CRMScript.NetServer.NSTemplateInfo.#ctor
   - CRMScript.NetServer.NSTemplateInfo.SetDescription(String)
   - CRMScript.NetServer.NSTemplateInfo.SetExternalReference(String)
   - CRMScript.NetServer.NSTemplateInfo.SetName(String)
@@ -21,86 +21,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSTemplateInfo.GetDescription()
-  commentId: M:CRMScript.NetServer.NSTemplateInfo.GetDescription()
-  id: 'GetDescription()'
-  so.intellisense: NSTemplateInfo.GetDescription
-  langs:
-  - crmscript
-  name: 'GetDescription()'
-  nameWithType: NSTemplateInfo.GetDescription()
-  fullName: CRMScript.NetServer.NSTemplateInfo.GetDescription()
-  type: Method
-  summary: "\nDocument description, shown as a tooltip or in some extended description area\n"
-  remarks: 
-  syntax: 
-    content: String GetDescription()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTemplateInfo thing;\nString description = thing.GetDescription();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTemplateInfo.GetExternalReference()
-  commentId: M:CRMScript.NetServer.NSTemplateInfo.GetExternalReference()
-  id: 'GetExternalReference()'
-  so.intellisense: NSTemplateInfo.GetExternalReference
-  langs:
-  - crmscript
-  name: 'GetExternalReference()'
-  nameWithType: NSTemplateInfo.GetExternalReference()
-  fullName: CRMScript.NetServer.NSTemplateInfo.GetExternalReference()
-  type: Method
-  summary: "\nUnique key that identifies the document so it can be retrieved\n"
-  remarks: 
-  syntax: 
-    content: String GetExternalReference()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTemplateInfo thing;\nString externalReference = thing.GetExternalReference();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTemplateInfo.GetName()
-  commentId: M:CRMScript.NetServer.NSTemplateInfo.GetName()
-  id: 'GetName()'
-  so.intellisense: NSTemplateInfo.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSTemplateInfo.GetName()
-  fullName: CRMScript.NetServer.NSTemplateInfo.GetName()
-  type: Method
-  summary: "\nName of the document, shown in lists etc to the user\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTemplateInfo thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTemplateInfo.GetPluginId()
-  commentId: M:CRMScript.NetServer.NSTemplateInfo.GetPluginId()
-  id: 'GetPluginId()'
-  so.intellisense: NSTemplateInfo.GetPluginId
-  langs:
-  - crmscript
-  name: 'GetPluginId()'
-  nameWithType: NSTemplateInfo.GetPluginId()
-  fullName: CRMScript.NetServer.NSTemplateInfo.GetPluginId()
-  type: Method
-  summary: "\nID of plugin that stores this template, so it can be retrieved\n"
-  remarks: 
-  syntax: 
-    content: Integer GetPluginId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSTemplateInfo thing;\nInteger pluginId = thing.GetPluginId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTemplateInfo.#ctor
   commentId: M:CRMScript.NetServer.NSTemplateInfo.#ctor
   id: '#ctor'
@@ -116,6 +36,86 @@ items:
   syntax: 
     content: NSTemplateInfo
   example: 
+- uid: CRMScript.NetServer.NSTemplateInfo.GetDescription()
+  commentId: M:CRMScript.NetServer.NSTemplateInfo.GetDescription()
+  id: 'GetDescription()'
+  so.intellisense: NSTemplateInfo.GetDescription
+  langs:
+  - crmscript
+  name: 'GetDescription()'
+  nameWithType: NSTemplateInfo.GetDescription()
+  fullName: CRMScript.NetServer.NSTemplateInfo.GetDescription()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Document description, shown as a tooltip or in some extended description area
+  example: 
+  - "\n<pre><code>NSTemplateInfo thing;\nString description = thing.GetDescription();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTemplateInfo.GetExternalReference()
+  commentId: M:CRMScript.NetServer.NSTemplateInfo.GetExternalReference()
+  id: 'GetExternalReference()'
+  so.intellisense: NSTemplateInfo.GetExternalReference
+  langs:
+  - crmscript
+  name: 'GetExternalReference()'
+  nameWithType: NSTemplateInfo.GetExternalReference()
+  fullName: CRMScript.NetServer.NSTemplateInfo.GetExternalReference()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetExternalReference()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Unique key that identifies the document so it can be retrieved
+  example: 
+  - "\n<pre><code>NSTemplateInfo thing;\nString externalReference = thing.GetExternalReference();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTemplateInfo.GetName()
+  commentId: M:CRMScript.NetServer.NSTemplateInfo.GetName()
+  id: 'GetName()'
+  so.intellisense: NSTemplateInfo.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSTemplateInfo.GetName()
+  fullName: CRMScript.NetServer.NSTemplateInfo.GetName()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Name of the document, shown in lists etc to the user
+  example: 
+  - "\n<pre><code>NSTemplateInfo thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTemplateInfo.GetPluginId()
+  commentId: M:CRMScript.NetServer.NSTemplateInfo.GetPluginId()
+  id: 'GetPluginId()'
+  so.intellisense: NSTemplateInfo.GetPluginId
+  langs:
+  - crmscript
+  name: 'GetPluginId()'
+  nameWithType: NSTemplateInfo.GetPluginId()
+  fullName: CRMScript.NetServer.NSTemplateInfo.GetPluginId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetPluginId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: ID of plugin that stores this template, so it can be retrieved
+  example: 
+  - "\n<pre><code>NSTemplateInfo thing;\nInteger pluginId = thing.GetPluginId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTemplateInfo.SetDescription(String)
   commentId: M:CRMScript.NetServer.NSTemplateInfo.SetDescription(String)
   id: 'SetDescription(String)'
@@ -126,14 +126,14 @@ items:
   nameWithType: NSTemplateInfo.SetDescription(String)
   fullName: CRMScript.NetServer.NSTemplateInfo.SetDescription(String)
   type: Method
-  summary: "\nDocument description, shown as a tooltip or in some extended description area\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
     parameters:
     - id: description
       type: CRMScript.Global.String
-      description: 
+      description: Document description, shown as a tooltip or in some extended description area
     return:
       type: CRMScript.Global.Void
   example: 
@@ -148,14 +148,14 @@ items:
   nameWithType: NSTemplateInfo.SetExternalReference(String)
   fullName: CRMScript.NetServer.NSTemplateInfo.SetExternalReference(String)
   type: Method
-  summary: "\nUnique key that identifies the document so it can be retrieved\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetExternalReference(String externalReference)
     parameters:
     - id: externalReference
       type: CRMScript.Global.String
-      description: 
+      description: Unique key that identifies the document so it can be retrieved
     return:
       type: CRMScript.Global.Void
   example: 
@@ -170,14 +170,14 @@ items:
   nameWithType: NSTemplateInfo.SetName(String)
   fullName: CRMScript.NetServer.NSTemplateInfo.SetName(String)
   type: Method
-  summary: "\nName of the document, shown in lists etc to the user\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: Name of the document, shown in lists etc to the user
     return:
       type: CRMScript.Global.Void
   example: 
@@ -192,14 +192,14 @@ items:
   nameWithType: NSTemplateInfo.SetPluginId(Integer)
   fullName: CRMScript.NetServer.NSTemplateInfo.SetPluginId(Integer)
   type: Method
-  summary: "\nID of plugin that stores this template, so it can be retrieved\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetPluginId(Integer pluginId)
     parameters:
     - id: pluginId
       type: CRMScript.Global.Integer
-      description: 
+      description: ID of plugin that stores this template, so it can be retrieved
     return:
       type: CRMScript.Global.Void
   example: 
