--- a/docs/api-reference/CRMScript.NetServer.NSTemporaryKeyInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTemporaryKeyInfo.yml
@@ -6,11 +6,11 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSTemporaryKeyInfo.#ctor
   - CRMScript.NetServer.NSTemporaryKeyInfo.GetDomain()
   - CRMScript.NetServer.NSTemporaryKeyInfo.GetIsExpired()
   - CRMScript.NetServer.NSTemporaryKeyInfo.GetPersonId()
   - CRMScript.NetServer.NSTemporaryKeyInfo.GetTargetId()
-  - CRMScript.NetServer.NSTemporaryKeyInfo.#ctor
   - CRMScript.NetServer.NSTemporaryKeyInfo.SetDomain(Integer)
   - CRMScript.NetServer.NSTemporaryKeyInfo.SetIsExpired(Bool)
   - CRMScript.NetServer.NSTemporaryKeyInfo.SetPersonId(Integer)
@@ -21,86 +21,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSTemporaryKeyInfo.GetDomain()
-  commentId: M:CRMScript.NetServer.NSTemporaryKeyInfo.GetDomain()
-  id: 'GetDomain()'
-  so.intellisense: NSTemporaryKeyInfo.GetDomain
-  langs:
-  - crmscript
-  name: 'GetDomain()'
-  nameWithType: NSTemporaryKeyInfo.GetDomain()
-  fullName: CRMScript.NetServer.NSTemporaryKeyInfo.GetDomain()
-  type: Method
-  summary: "\nThe domain for this key. Unknown if key is not valid.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = MailingRecipient</li><li>Enum: 2 = FormSubmitterRecipient</li><li>Enum: 3 = ViewTicketInCustomerCenter</li><li>Enum: 4 = LoginCustomerCenter</li><li>Enum: 5 = PublicFaq</li><li>Enum: 6 = ChangePasswordCustomerCenter</li></ul><pre><code>NSTemporaryKeyInfo thing;\nInteger domain = thing.GetDomain();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetDomain()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSTemporaryKeyInfo thing;\nInteger domain = thing.GetDomain();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTemporaryKeyInfo.GetIsExpired()
-  commentId: M:CRMScript.NetServer.NSTemporaryKeyInfo.GetIsExpired()
-  id: 'GetIsExpired()'
-  so.intellisense: NSTemporaryKeyInfo.GetIsExpired
-  langs:
-  - crmscript
-  name: 'GetIsExpired()'
-  nameWithType: NSTemporaryKeyInfo.GetIsExpired()
-  fullName: CRMScript.NetServer.NSTemporaryKeyInfo.GetIsExpired()
-  type: Method
-  summary: "\nWhether the key is expired or not.\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIsExpired()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSTemporaryKeyInfo thing;\nBool isExpired = thing.GetIsExpired();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTemporaryKeyInfo.GetPersonId()
-  commentId: M:CRMScript.NetServer.NSTemporaryKeyInfo.GetPersonId()
-  id: 'GetPersonId()'
-  so.intellisense: NSTemporaryKeyInfo.GetPersonId
-  langs:
-  - crmscript
-  name: 'GetPersonId()'
-  nameWithType: NSTemporaryKeyInfo.GetPersonId()
-  fullName: CRMScript.NetServer.NSTemporaryKeyInfo.GetPersonId()
-  type: Method
-  summary: "\nThe person id this key is related to. May be null.\n"
-  remarks: 
-  syntax: 
-    content: Integer GetPersonId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSTemporaryKeyInfo thing;\nInteger personId = thing.GetPersonId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTemporaryKeyInfo.GetTargetId()
-  commentId: M:CRMScript.NetServer.NSTemporaryKeyInfo.GetTargetId()
-  id: 'GetTargetId()'
-  so.intellisense: NSTemporaryKeyInfo.GetTargetId
-  langs:
-  - crmscript
-  name: 'GetTargetId()'
-  nameWithType: NSTemporaryKeyInfo.GetTargetId()
-  fullName: CRMScript.NetServer.NSTemporaryKeyInfo.GetTargetId()
-  type: Method
-  summary: "\nThe primary key of the entity this temporary key is for, dependent of dmain\n"
-  remarks: 
-  syntax: 
-    content: Integer GetTargetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSTemporaryKeyInfo thing;\nInteger targetId = thing.GetTargetId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTemporaryKeyInfo.#ctor
   commentId: M:CRMScript.NetServer.NSTemporaryKeyInfo.#ctor
   id: '#ctor'
@@ -116,6 +36,86 @@ items:
   syntax: 
     content: NSTemporaryKeyInfo
   example: 
+- uid: CRMScript.NetServer.NSTemporaryKeyInfo.GetDomain()
+  commentId: M:CRMScript.NetServer.NSTemporaryKeyInfo.GetDomain()
+  id: 'GetDomain()'
+  so.intellisense: NSTemporaryKeyInfo.GetDomain
+  langs:
+  - crmscript
+  name: 'GetDomain()'
+  nameWithType: NSTemporaryKeyInfo.GetDomain()
+  fullName: CRMScript.NetServer.NSTemporaryKeyInfo.GetDomain()
+  type: Method
+  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = MailingRecipient</li><li>Enum: 2 = FormSubmitterRecipient</li><li>Enum: 3 = ViewTicketInCustomerCenter</li><li>Enum: 4 = LoginCustomerCenter</li><li>Enum: 5 = PublicFaq</li><li>Enum: 6 = ChangePasswordCustomerCenter</li></ul>\n"
+  remarks: 
+  syntax: 
+    content: Integer GetDomain()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The domain for this key. Unknown if key is not valid.
+  example: 
+  - "\n<pre><code>NSTemporaryKeyInfo thing;\nInteger domain = thing.GetDomain();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTemporaryKeyInfo.GetIsExpired()
+  commentId: M:CRMScript.NetServer.NSTemporaryKeyInfo.GetIsExpired()
+  id: 'GetIsExpired()'
+  so.intellisense: NSTemporaryKeyInfo.GetIsExpired
+  langs:
+  - crmscript
+  name: 'GetIsExpired()'
+  nameWithType: NSTemporaryKeyInfo.GetIsExpired()
+  fullName: CRMScript.NetServer.NSTemporaryKeyInfo.GetIsExpired()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Bool GetIsExpired()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Whether the key is expired or not.
+  example: 
+  - "\n<pre><code>NSTemporaryKeyInfo thing;\nBool isExpired = thing.GetIsExpired();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTemporaryKeyInfo.GetPersonId()
+  commentId: M:CRMScript.NetServer.NSTemporaryKeyInfo.GetPersonId()
+  id: 'GetPersonId()'
+  so.intellisense: NSTemporaryKeyInfo.GetPersonId
+  langs:
+  - crmscript
+  name: 'GetPersonId()'
+  nameWithType: NSTemporaryKeyInfo.GetPersonId()
+  fullName: CRMScript.NetServer.NSTemporaryKeyInfo.GetPersonId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetPersonId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The person ID this key is related to. May be null.
+  example: 
+  - "\n<pre><code>NSTemporaryKeyInfo thing;\nInteger personId = thing.GetPersonId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTemporaryKeyInfo.GetTargetId()
+  commentId: M:CRMScript.NetServer.NSTemporaryKeyInfo.GetTargetId()
+  id: 'GetTargetId()'
+  so.intellisense: NSTemporaryKeyInfo.GetTargetId
+  langs:
+  - crmscript
+  name: 'GetTargetId()'
+  nameWithType: NSTemporaryKeyInfo.GetTargetId()
+  fullName: CRMScript.NetServer.NSTemporaryKeyInfo.GetTargetId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetTargetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The primary key of the entity this temporary key is for, dependent of domain
+  example: 
+  - "\n<pre><code>NSTemporaryKeyInfo thing;\nInteger targetId = thing.GetTargetId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTemporaryKeyInfo.SetDomain(Integer)
   commentId: M:CRMScript.NetServer.NSTemporaryKeyInfo.SetDomain(Integer)
   id: 'SetDomain(Integer)'
@@ -126,14 +126,14 @@ items:
   nameWithType: NSTemporaryKeyInfo.SetDomain(Integer)
   fullName: CRMScript.NetServer.NSTemporaryKeyInfo.SetDomain(Integer)
   type: Method
-  summary: "\nThe domain for this key. Unknown if key is not valid.\n"
-  remarks: "\n<p>See enum domain.</p>\n"
+  summary: 
+  remarks: 
   syntax: 
     content: Void SetDomain(Integer domain)
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: 
+      description: The domain for this key. Unknown if key is not valid. See enum domain.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -148,14 +148,14 @@ items:
   nameWithType: NSTemporaryKeyInfo.SetIsExpired(Bool)
   fullName: CRMScript.NetServer.NSTemporaryKeyInfo.SetIsExpired(Bool)
   type: Method
-  summary: "\nWhether the key is expired or not.\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetIsExpired(Bool isExpired)
     parameters:
     - id: isExpired
       type: CRMScript.Global.Bool
-      description: 
+      description:  Whether the key is expired or not.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -170,14 +170,14 @@ items:
   nameWithType: NSTemporaryKeyInfo.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSTemporaryKeyInfo.SetPersonId(Integer)
   type: Method
-  summary: "\nThe person id this key is related to. May be null.\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
     parameters:
     - id: personId
       type: CRMScript.Global.Integer
-      description: 
+      description:  The person ID this key is related to. May be null.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -192,14 +192,14 @@ items:
   nameWithType: NSTemporaryKeyInfo.SetTargetId(Integer)
   fullName: CRMScript.NetServer.NSTemporaryKeyInfo.SetTargetId(Integer)
   type: Method
-  summary: "\nThe primary key of the entity this temporary key is for, dependent of dmain\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetTargetId(Integer targetId)
     parameters:
     - id: targetId
       type: CRMScript.Global.Integer
-      description: 
+      description: The primary key of the entity this temporary key is for, dependent of domain
     return:
       type: CRMScript.Global.Void
   example: 
