--- a/docs/api-reference/CRMScript.NetServer.NSTicketAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketAgent.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSTicketAgent.#ctor
   - CRMScript.NetServer.NSTicketAgent.AddAttachments(Integer,Integer[])
   - CRMScript.NetServer.NSTicketAgent.CreateDefaultAttachmentEntity()
   - CRMScript.NetServer.NSTicketAgent.CreateDefaultTicketEntity()
@@ -24,21 +25,36 @@ items:
   - CRMScript.NetServer.NSTicketAgent.Html2Text(String)
   - CRMScript.NetServer.NSTicketAgent.NotifyNewTicket(Integer)
   - CRMScript.NetServer.NSTicketAgent.NotifyNewTicketMessage(Integer)
-  - CRMScript.NetServer.NSTicketAgent.#ctor
   - CRMScript.NetServer.NSTicketAgent.SanitizeMailContent(String)
   - CRMScript.NetServer.NSTicketAgent.SanitizeMailContents(String[])
-  - CRMScript.NetServer.NSTicketAgent.SaveAttachmentEntity()
+  - CRMScript.NetServer.NSTicketAgent.SaveAttachmentEntity(NSAttachmentEntity)
   - CRMScript.NetServer.NSTicketAgent.SaveTicketEntity(NSTicketEntity)
-  - CRMScript.NetServer.NSTicketAgent.SaveTicketMessageEntity()
+  - CRMScript.NetServer.NSTicketAgent.SaveTicketMessageEntity(NSTicketMessageEntity)
   - CRMScript.NetServer.NSTicketAgent.SendTicketMessage(Integer,String[],String[],String[],String,Integer,String)
   - CRMScript.NetServer.NSTicketAgent.SetTicketMessageImportant(Integer,Bool)
   - CRMScript.NetServer.NSTicketAgent.SetTicketReadByOwner(Integer,Integer,Bool)
-  - CRMScript.NetServer.NSTicketAgent.UploadAttachment(Integer)
+  - CRMScript.NetServer.NSTicketAgent.UploadAttachment(Integer,NSStream)
   name: NSTicketAgent
   nameWithType: NSTicketAgent
   fullName: CRMScript.NetServer.NSTicketAgent
   type: Class
   summary: "\nAgent used for Ticket functions.\n"
+  example: 
+  - "\n<pre><code>NSTicketAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
+- uid: CRMScript.NetServer.NSTicketAgent.#ctor
+  commentId: M:CRMScript.NetServer.NSTicketAgent.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSTicketAgent
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSTicketAgent.#ctor
+  fullName: CRMScript.NetServer.NSTicketAgent.#ctor
+  type: Constructor
+  summary: "\nAgent used for Ticket functions.\n"
+  remarks: 
+  syntax: 
+    content: NSTicketAgent
   example: 
   - "\n<pre><code>NSTicketAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketAgent.AddAttachments(Integer,Integer[])
@@ -51,7 +67,7 @@ items:
   nameWithType: NSTicketAgent.AddAttachments(Integer,Integer[])
   fullName: CRMScript.NetServer.NSTicketAgent.AddAttachments(Integer,Integer[])
   type: Method
-  summary: "\nConnect existing attachments with this TicketMessage. Can connect multiple attachments\n"
+  summary: "\nConnects existing attachments with this TicketMessage. Can connect multiple attachments\n"
   remarks: 
   syntax: 
     content: Void AddAttachments(Integer ticketMessageEntityId, Integer[] attachmentIds)
@@ -397,7 +413,7 @@ items:
   nameWithType: NSTicketAgent.NotifyNewTicket(Integer)
   fullName: CRMScript.NetServer.NSTicketAgent.NotifyNewTicket(Integer)
   type: Method
-  summary: "\nNotify user agents about the creation of a new ticket\n"
+  summary: "\nNotifies user agents about the creation of a new ticket\n"
   remarks: 
   syntax: 
     content: Void NotifyNewTicket(Integer ticketEntityId)
@@ -419,7 +435,7 @@ items:
   nameWithType: NSTicketAgent.NotifyNewTicketMessage(Integer)
   fullName: CRMScript.NetServer.NSTicketAgent.NotifyNewTicketMessage(Integer)
   type: Method
-  summary: "\nNotify user agents about the creation of a new message on a ticket\n"
+  summary: "\nNotifies user agents about the creation of a new message on a ticket\n"
   remarks: 
   syntax: 
     content: Void NotifyNewTicketMessage(Integer ticketEntityId)
@@ -431,22 +447,6 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSTicketAgent agent;\nInteger ticketEntityId;\nagent.NotifyNewTicketMessage(ticketEntityId);</code></pre>\n"
-- uid: CRMScript.NetServer.NSTicketAgent.#ctor
-  commentId: M:CRMScript.NetServer.NSTicketAgent.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSTicketAgent
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSTicketAgent.#ctor
-  fullName: CRMScript.NetServer.NSTicketAgent.#ctor
-  type: Constructor
-  summary: "\nAgent used for Ticket functions.\n"
-  remarks: 
-  syntax: 
-    content: NSTicketAgent
-  example: 
-  - "\n<pre><code>NSTicketAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketAgent.SanitizeMailContent(String)
   commentId: M:CRMScript.NetServer.NSTicketAgent.SanitizeMailContent(String)
   id: 'SanitizeMailContent(String)'
@@ -457,7 +457,7 @@ items:
   nameWithType: NSTicketAgent.SanitizeMailContent(String)
   fullName: CRMScript.NetServer.NSTicketAgent.SanitizeMailContent(String)
   type: Method
-  summary: "\nRemove harmful HTML tags and attributes from an email\n"
+  summary: "\nRemoves harmful HTML tags and attributes from an email\n"
   remarks: 
   syntax: 
     content: String SanitizeMailContent(String content)
@@ -480,7 +480,7 @@ items:
   nameWithType: NSTicketAgent.SanitizeMailContents(String[])
   fullName: CRMScript.NetServer.NSTicketAgent.SanitizeMailContents(String[])
   type: Method
-  summary: "\nRemove harmful HTML tags and attributes from an email\n"
+  summary: "\nRemoves harmful HTML tags and attributes from an email\n"
   remarks: 
   syntax: 
     content: String[] SanitizeMailContents(String[] contents)
@@ -493,21 +493,24 @@ items:
       description:
   example: 
   - "\n<pre><code>NSTicketAgent agent;\nString[] contents;\nString[] res = agent.SanitizeMailContents(contents);</code></pre>\n"
-- uid: CRMScript.NetServer.NSTicketAgent.SaveAttachmentEntity()
-  commentId: M:CRMScript.NetServer.NSTicketAgent.SaveAttachmentEntity()
-  id: 'SaveAttachmentEntity()'
+- uid: CRMScript.NetServer.NSTicketAgent.SaveAttachmentEntity(NSAttachmentEntity)
+  commentId: M:CRMScript.NetServer.NSTicketAgent.SaveAttachmentEntity(NSAttachmentEntity)
+  id: 'SaveAttachmentEntity(NSAttachmentEntity)'
   so.intellisense: NSTicketAgent.SaveAttachmentEntity
   langs:
   - crmscript
-  name: 'SaveAttachmentEntity()'
-  nameWithType: NSTicketAgent.SaveAttachmentEntity()
-  fullName: CRMScript.NetServer.NSTicketAgent.SaveAttachmentEntity()
+  name: 'SaveAttachmentEntity(NSAttachmentEntity)'
+  nameWithType: NSTicketAgent.SaveAttachmentEntity(NSAttachmentEntity)
+  fullName: CRMScript.NetServer.NSTicketAgent.SaveAttachmentEntity(NSAttachmentEntity)
   type: Method
-  summary: "\nUpdates the existing NSAttachmentEntity or creates a new NSAttachmentEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>attachmentEntity</strong>The NSAttachmentEntity to save.</li></ul>\n"
+  summary: "\nUpdates the existing NSAttachmentEntity or creates a new NSAttachmentEntity if the id parameter is 0\n"
   remarks: 
   syntax: 
     content: NSAttachmentEntity SaveAttachmentEntity(NSAttachmentEntity attachmentEntity)
     parameters:
+    - id: attachmentEntity
+      type: CRMScript.NetServer.NSAttachmentEntity
+      description: The NSAttachmentEntity to save.
     return:
       type: CRMScript.NetServer.NSAttachmentEntity
   example: 
@@ -522,33 +525,36 @@ items:
   nameWithType: NSTicketAgent.SaveTicketEntity(NSTicketEntity)
   fullName: CRMScript.NetServer.NSTicketAgent.SaveTicketEntity(NSTicketEntity)
   type: Method
-  summary: "\nUpdates the existing NSTicketEntity or creates a new NSTicketEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>ticketEntity</strong>The NSTicketEntity to save.</li></ul>\n"
+  summary: "\nUpdates the existing NSTicketEntity or creates a new NSTicketEntity if the id parameter is 0\n"
   remarks: 
   syntax: 
     content: NSTicketEntity SaveTicketEntity(NSTicketEntity ticketEntity)
     parameters:
     - id: ticketEntity
       type: CRMScript.NetServer.NSTicketEntity
-      description: 
+      description: The NSTicketEntity to save.
     return:
       type: CRMScript.NetServer.NSTicketEntity
   example: 
   - "\n<pre><code>NSTicketAgent agent;\nNSTicketEntity thing = agent.CreateDefaultTicketEntity();\nthing = agent.SaveTicketEntity(thing);</code></pre>\n"
-- uid: CRMScript.NetServer.NSTicketAgent.SaveTicketMessageEntity()
-  commentId: M:CRMScript.NetServer.NSTicketAgent.SaveTicketMessageEntity()
-  id: 'SaveTicketMessageEntity()'
+- uid: CRMScript.NetServer.NSTicketAgent.SaveTicketMessageEntity(NSTicketMessageEntity)
+  commentId: M:CRMScript.NetServer.NSTicketAgent.SaveTicketMessageEntity(NSTicketMessageEntity)
+  id: 'SaveTicketMessageEntity(NSTicketMessageEntity)'
   so.intellisense: NSTicketAgent.SaveTicketMessageEntity
   langs:
   - crmscript
-  name: 'SaveTicketMessageEntity()'
-  nameWithType: NSTicketAgent.SaveTicketMessageEntity()
-  fullName: CRMScript.NetServer.NSTicketAgent.SaveTicketMessageEntity()
+  name: 'SaveTicketMessageEntity(NSTicketMessageEntity)'
+  nameWithType: NSTicketAgent.SaveTicketMessageEntity(NSTicketMessageEntity)
+  fullName: CRMScript.NetServer.NSTicketAgent.SaveTicketMessageEntity(NSTicketMessageEntity)
   type: Method
-  summary: "\nUpdates the existing NSTicketMessageEntity or creates a new NSTicketMessageEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>ticketMessageEntity</strong>The NSTicketMessageEntity to save.</li></ul>\n"
+  summary: "\nUpdates the existing NSTicketMessageEntity or creates a new NSTicketMessageEntity if the id parameter is 0\n"
   remarks: 
   syntax: 
     content: NSTicketMessageEntity SaveTicketMessageEntity(NSTicketMessageEntity ticketMessageEntity)
     parameters:
+    - id: ticketMessageEntity
+      type: CRMScript.NetServer.NSTicketMessageEntity
+      description: The NSTicketMessageEntity to save.
     return:
       type: CRMScript.NetServer.NSTicketMessageEntity
   example: 
@@ -563,7 +569,7 @@ items:
   nameWithType: NSTicketAgent.SendTicketMessage(Integer,String[],String[],String[],String,Integer,String)
   fullName: CRMScript.NetServer.NSTicketAgent.SendTicketMessage(Integer,String[],String[],String[],String,Integer,String)
   type: Method
-  summary: "\nSend a message to recipients, e.g. by email or sms\n"
+  summary: "\nSends a message to recipients, e.g. by email or sms\n"
   remarks: 
   syntax: 
     content: Void SendTicketMessage(Integer ticketMessageEntityId, String[] to, String[] cc, String[] bcc, String subject, Integer replyTemplateId, String gdprSource)
@@ -628,7 +634,7 @@ items:
   fullName: CRMScript.NetServer.NSTicketAgent.SetTicketReadByOwner(Integer,Integer,Bool)
   type: Method
   summary: "\nSets the ReadByOwner status for a ticket. It will only have an effect if the calling user is the same as the owner of the ticket\n"
-  remarks: "\n<p>See enum checkEscalating.</p>\n"
+  remarks: 
   syntax: 
     content: NSTicketEntity SetTicketReadByOwner(Integer ticketEntityId, Integer readStatus, Bool checkEscalating)
     parameters:
@@ -640,31 +646,34 @@ items:
       description: 
     - id: checkEscalating
       type: CRMScript.Global.Bool
-      description: 
+      description:  See enum checkEscalating.
     return:
       type: CRMScript.NetServer.NSTicketEntity
   example: 
   - "\n<pre><code>NSTicketAgent agent;\nInteger ticketEntityId;\nInteger readStatus;\nBool checkEscalating;\nNSTicketEntity res = agent.SetTicketReadByOwner(ticketEntityId, readStatus, checkEscalating);</code></pre>\n"
-- uid: CRMScript.NetServer.NSTicketAgent.UploadAttachment(Integer)
-  commentId: M:CRMScript.NetServer.NSTicketAgent.UploadAttachment(Integer)
-  id: 'UploadAttachment(Integer)'
+- uid: CRMScript.NetServer.NSTicketAgent.UploadAttachment(Integer,NSStream)
+  commentId: M:CRMScript.NetServer.NSTicketAgent.UploadAttachment(Integer,NSStream)
+  id: 'UploadAttachment(Integer,NSStream)'
   so.intellisense: NSTicketAgent.UploadAttachment
   langs:
   - crmscript
-  name: 'UploadAttachment(Integer)'
-  nameWithType: NSTicketAgent.UploadAttachment(Integer)
-  fullName: CRMScript.NetServer.NSTicketAgent.UploadAttachment(Integer)
+  name: 'UploadAttachment(Integer,NSStream)'
+  nameWithType: NSTicketAgent.UploadAttachment(Integer,NSStream)
+  fullName: CRMScript.NetServer.NSTicketAgent.UploadAttachment(Integer,NSStream)
   type: Method
-  summary: "\nUpload an attachment and return the attachment ID\n"
+  summary: "\nUploads an attachment and returns the attachment ID\n"
   remarks: 
   syntax: 
-    content: Void UploadAttachment(Integer attachmentId, NSStream content)
+    content: Integer UploadAttachment(Integer attachmentId, NSStream content)
     parameters:
     - id: attachmentId
       type: CRMScript.Global.Integer
       description: 
+    - id: content
+      type: CRMScript.NetServer.NSStream
+      description:
     return:
-      type: CRMScript.Global.Void
+      type: CRMScript.Global.Integer
   example: 
 references:
 - uid: CRMScript.NetServer.NSTicketAgent
