--- a/docs/api-reference/CRMScript.NetServer.NSTicketInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketInfo.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSTicketInfo.#ctor
   - CRMScript.NetServer.NSTicketInfo.GetCategoryName()
   - CRMScript.NetServer.NSTicketInfo.GetContactName()
   - CRMScript.NetServer.NSTicketInfo.GetOwnerName()
@@ -14,7 +15,6 @@ items:
   - CRMScript.NetServer.NSTicketInfo.GetTicketId()
   - CRMScript.NetServer.NSTicketInfo.GetTicketUrl()
   - CRMScript.NetServer.NSTicketInfo.GetTitle()
-  - CRMScript.NetServer.NSTicketInfo.#ctor
   - CRMScript.NetServer.NSTicketInfo.SetCategoryName(String)
   - CRMScript.NetServer.NSTicketInfo.SetContactName(String)
   - CRMScript.NetServer.NSTicketInfo.SetOwnerName(String)
@@ -29,166 +29,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSTicketInfo.GetCategoryName()
-  commentId: M:CRMScript.NetServer.NSTicketInfo.GetCategoryName()
-  id: 'GetCategoryName()'
-  so.intellisense: NSTicketInfo.GetCategoryName
-  langs:
-  - crmscript
-  name: 'GetCategoryName()'
-  nameWithType: NSTicketInfo.GetCategoryName()
-  fullName: CRMScript.NetServer.NSTicketInfo.GetCategoryName()
-  type: Method
-  summary: "\nThe name of the category for the request\n"
-  remarks: 
-  syntax: 
-    content: String GetCategoryName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTicketInfo thing;\nString categoryName = thing.GetCategoryName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTicketInfo.GetContactName()
-  commentId: M:CRMScript.NetServer.NSTicketInfo.GetContactName()
-  id: 'GetContactName()'
-  so.intellisense: NSTicketInfo.GetContactName
-  langs:
-  - crmscript
-  name: 'GetContactName()'
-  nameWithType: NSTicketInfo.GetContactName()
-  fullName: CRMScript.NetServer.NSTicketInfo.GetContactName()
-  type: Method
-  summary: "\nThe name of the contact/company connected to the ticket\n"
-  remarks: 
-  syntax: 
-    content: String GetContactName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTicketInfo thing;\nString contactName = thing.GetContactName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTicketInfo.GetOwnerName()
-  commentId: M:CRMScript.NetServer.NSTicketInfo.GetOwnerName()
-  id: 'GetOwnerName()'
-  so.intellisense: NSTicketInfo.GetOwnerName
-  langs:
-  - crmscript
-  name: 'GetOwnerName()'
-  nameWithType: NSTicketInfo.GetOwnerName()
-  fullName: CRMScript.NetServer.NSTicketInfo.GetOwnerName()
-  type: Method
-  summary: "\nThe name of the owner which the request was assigned to\n"
-  remarks: 
-  syntax: 
-    content: String GetOwnerName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTicketInfo thing;\nString ownerName = thing.GetOwnerName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTicketInfo.GetPersonName()
-  commentId: M:CRMScript.NetServer.NSTicketInfo.GetPersonName()
-  id: 'GetPersonName()'
-  so.intellisense: NSTicketInfo.GetPersonName
-  langs:
-  - crmscript
-  name: 'GetPersonName()'
-  nameWithType: NSTicketInfo.GetPersonName()
-  fullName: CRMScript.NetServer.NSTicketInfo.GetPersonName()
-  type: Method
-  summary: "\nThe name of the person/customer connected to the ticket\n"
-  remarks: 
-  syntax: 
-    content: String GetPersonName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTicketInfo thing;\nString personName = thing.GetPersonName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTicketInfo.GetPriorityName()
-  commentId: M:CRMScript.NetServer.NSTicketInfo.GetPriorityName()
-  id: 'GetPriorityName()'
-  so.intellisense: NSTicketInfo.GetPriorityName
-  langs:
-  - crmscript
-  name: 'GetPriorityName()'
-  nameWithType: NSTicketInfo.GetPriorityName()
-  fullName: CRMScript.NetServer.NSTicketInfo.GetPriorityName()
-  type: Method
-  summary: "\nThe name of the priority for the request\n"
-  remarks: 
-  syntax: 
-    content: String GetPriorityName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTicketInfo thing;\nString priorityName = thing.GetPriorityName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTicketInfo.GetTicketId()
-  commentId: M:CRMScript.NetServer.NSTicketInfo.GetTicketId()
-  id: 'GetTicketId()'
-  so.intellisense: NSTicketInfo.GetTicketId
-  langs:
-  - crmscript
-  name: 'GetTicketId()'
-  nameWithType: NSTicketInfo.GetTicketId()
-  fullName: CRMScript.NetServer.NSTicketInfo.GetTicketId()
-  type: Method
-  summary: "\nThe ID of the created ticket\n"
-  remarks: 
-  syntax: 
-    content: Integer GetTicketId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSTicketInfo thing;\nInteger ticketId = thing.GetTicketId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTicketInfo.GetTicketUrl()
-  commentId: M:CRMScript.NetServer.NSTicketInfo.GetTicketUrl()
-  id: 'GetTicketUrl()'
-  so.intellisense: NSTicketInfo.GetTicketUrl
-  langs:
-  - crmscript
-  name: 'GetTicketUrl()'
-  nameWithType: NSTicketInfo.GetTicketUrl()
-  fullName: CRMScript.NetServer.NSTicketInfo.GetTicketUrl()
-  type: Method
-  summary: "\nA URL leading directly to the created request. This is a URL ment to be used by a Service user\n"
-  remarks: 
-  syntax: 
-    content: String GetTicketUrl()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTicketInfo thing;\nString ticketUrl = thing.GetTicketUrl();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTicketInfo.GetTitle()
-  commentId: M:CRMScript.NetServer.NSTicketInfo.GetTitle()
-  id: 'GetTitle()'
-  so.intellisense: NSTicketInfo.GetTitle
-  langs:
-  - crmscript
-  name: 'GetTitle()'
-  nameWithType: NSTicketInfo.GetTitle()
-  fullName: CRMScript.NetServer.NSTicketInfo.GetTitle()
-  type: Method
-  summary: "\nThe title/subject of the created ticket\n"
-  remarks: 
-  syntax: 
-    content: String GetTitle()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTicketInfo thing;\nString title = thing.GetTitle();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketInfo.#ctor
   commentId: M:CRMScript.NetServer.NSTicketInfo.#ctor
   id: '#ctor'
@@ -204,6 +44,166 @@ items:
   syntax: 
     content: NSTicketInfo
   example: 
+- uid: CRMScript.NetServer.NSTicketInfo.GetCategoryName()
+  commentId: M:CRMScript.NetServer.NSTicketInfo.GetCategoryName()
+  id: 'GetCategoryName()'
+  so.intellisense: NSTicketInfo.GetCategoryName
+  langs:
+  - crmscript
+  name: 'GetCategoryName()'
+  nameWithType: NSTicketInfo.GetCategoryName()
+  fullName: CRMScript.NetServer.NSTicketInfo.GetCategoryName()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetCategoryName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the category for the request
+  example: 
+  - "\n<pre><code>NSTicketInfo thing;\nString categoryName = thing.GetCategoryName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTicketInfo.GetContactName()
+  commentId: M:CRMScript.NetServer.NSTicketInfo.GetContactName()
+  id: 'GetContactName()'
+  so.intellisense: NSTicketInfo.GetContactName
+  langs:
+  - crmscript
+  name: 'GetContactName()'
+  nameWithType: NSTicketInfo.GetContactName()
+  fullName: CRMScript.NetServer.NSTicketInfo.GetContactName()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetContactName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the contact/company connected to the ticket
+  example: 
+  - "\n<pre><code>NSTicketInfo thing;\nString contactName = thing.GetContactName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTicketInfo.GetOwnerName()
+  commentId: M:CRMScript.NetServer.NSTicketInfo.GetOwnerName()
+  id: 'GetOwnerName()'
+  so.intellisense: NSTicketInfo.GetOwnerName
+  langs:
+  - crmscript
+  name: 'GetOwnerName()'
+  nameWithType: NSTicketInfo.GetOwnerName()
+  fullName: CRMScript.NetServer.NSTicketInfo.GetOwnerName()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetOwnerName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the owner which the request was assigned to
+  example: 
+  - "\n<pre><code>NSTicketInfo thing;\nString ownerName = thing.GetOwnerName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTicketInfo.GetPersonName()
+  commentId: M:CRMScript.NetServer.NSTicketInfo.GetPersonName()
+  id: 'GetPersonName()'
+  so.intellisense: NSTicketInfo.GetPersonName
+  langs:
+  - crmscript
+  name: 'GetPersonName()'
+  nameWithType: NSTicketInfo.GetPersonName()
+  fullName: CRMScript.NetServer.NSTicketInfo.GetPersonName()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetPersonName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the person/customer connected to the ticket
+  example: 
+  - "\n<pre><code>NSTicketInfo thing;\nString personName = thing.GetPersonName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTicketInfo.GetPriorityName()
+  commentId: M:CRMScript.NetServer.NSTicketInfo.GetPriorityName()
+  id: 'GetPriorityName()'
+  so.intellisense: NSTicketInfo.GetPriorityName
+  langs:
+  - crmscript
+  name: 'GetPriorityName()'
+  nameWithType: NSTicketInfo.GetPriorityName()
+  fullName: CRMScript.NetServer.NSTicketInfo.GetPriorityName()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetPriorityName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the priority for the request
+  example: 
+  - "\n<pre><code>NSTicketInfo thing;\nString priorityName = thing.GetPriorityName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTicketInfo.GetTicketId()
+  commentId: M:CRMScript.NetServer.NSTicketInfo.GetTicketId()
+  id: 'GetTicketId()'
+  so.intellisense: NSTicketInfo.GetTicketId
+  langs:
+  - crmscript
+  name: 'GetTicketId()'
+  nameWithType: NSTicketInfo.GetTicketId()
+  fullName: CRMScript.NetServer.NSTicketInfo.GetTicketId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetTicketId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The ID of the created ticket
+  example: 
+  - "\n<pre><code>NSTicketInfo thing;\nInteger ticketId = thing.GetTicketId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTicketInfo.GetTicketUrl()
+  commentId: M:CRMScript.NetServer.NSTicketInfo.GetTicketUrl()
+  id: 'GetTicketUrl()'
+  so.intellisense: NSTicketInfo.GetTicketUrl
+  langs:
+  - crmscript
+  name: 'GetTicketUrl()'
+  nameWithType: NSTicketInfo.GetTicketUrl()
+  fullName: CRMScript.NetServer.NSTicketInfo.GetTicketUrl()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetTicketUrl()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: A URL leading directly to the created request. This is a URL meant to be used by a Service user
+  example: 
+  - "\n<pre><code>NSTicketInfo thing;\nString ticketUrl = thing.GetTicketUrl();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTicketInfo.GetTitle()
+  commentId: M:CRMScript.NetServer.NSTicketInfo.GetTitle()
+  id: 'GetTitle()'
+  so.intellisense: NSTicketInfo.GetTitle
+  langs:
+  - crmscript
+  name: 'GetTitle()'
+  nameWithType: NSTicketInfo.GetTitle()
+  fullName: CRMScript.NetServer.NSTicketInfo.GetTitle()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetTitle()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The title/subject of the created ticket
+  example: 
+  - "\n<pre><code>NSTicketInfo thing;\nString title = thing.GetTitle();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketInfo.SetCategoryName(String)
   commentId: M:CRMScript.NetServer.NSTicketInfo.SetCategoryName(String)
   id: 'SetCategoryName(String)'
@@ -214,14 +214,14 @@ items:
   nameWithType: NSTicketInfo.SetCategoryName(String)
   fullName: CRMScript.NetServer.NSTicketInfo.SetCategoryName(String)
   type: Method
-  summary: "\nThe name of the category for the request\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetCategoryName(String categoryName)
     parameters:
     - id: categoryName
       type: CRMScript.Global.String
-      description: 
+      description:  The name of the category for the request
     return:
       type: CRMScript.Global.Void
   example: 
@@ -236,14 +236,14 @@ items:
   nameWithType: NSTicketInfo.SetContactName(String)
   fullName: CRMScript.NetServer.NSTicketInfo.SetContactName(String)
   type: Method
-  summary: "\nThe name of the contact/company connected to the ticket\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetContactName(String contactName)
     parameters:
     - id: contactName
       type: CRMScript.Global.String
-      description: 
+      description: The name of the contact/company connected to the ticket
     return:
       type: CRMScript.Global.Void
   example: 
@@ -258,14 +258,14 @@ items:
   nameWithType: NSTicketInfo.SetOwnerName(String)
   fullName: CRMScript.NetServer.NSTicketInfo.SetOwnerName(String)
   type: Method
-  summary: "\nThe name of the owner which the request was assigned to\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetOwnerName(String ownerName)
     parameters:
     - id: ownerName
       type: CRMScript.Global.String
-      description: 
+      description: The name of the owner which the request was assigned to
     return:
       type: CRMScript.Global.Void
   example: 
@@ -280,14 +280,14 @@ items:
   nameWithType: NSTicketInfo.SetPersonName(String)
   fullName: CRMScript.NetServer.NSTicketInfo.SetPersonName(String)
   type: Method
-  summary: "\nThe name of the person/customer connected to the ticket\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetPersonName(String personName)
     parameters:
     - id: personName
       type: CRMScript.Global.String
-      description: 
+      description: The name of the person/customer connected to the ticket
     return:
       type: CRMScript.Global.Void
   example: 
@@ -302,14 +302,14 @@ items:
   nameWithType: NSTicketInfo.SetPriorityName(String)
   fullName: CRMScript.NetServer.NSTicketInfo.SetPriorityName(String)
   type: Method
-  summary: "\nThe name of the priority for the request\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetPriorityName(String priorityName)
     parameters:
     - id: priorityName
       type: CRMScript.Global.String
-      description: 
+      description: The name of the priority for the request
     return:
       type: CRMScript.Global.Void
   example: 
@@ -324,14 +324,14 @@ items:
   nameWithType: NSTicketInfo.SetTicketId(Integer)
   fullName: CRMScript.NetServer.NSTicketInfo.SetTicketId(Integer)
   type: Method
-  summary: "\nThe ID of the created ticket\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetTicketId(Integer ticketId)
     parameters:
     - id: ticketId
       type: CRMScript.Global.Integer
-      description: 
+      description: The ID of the created ticket
     return:
       type: CRMScript.Global.Void
   example: 
@@ -346,14 +346,14 @@ items:
   nameWithType: NSTicketInfo.SetTicketUrl(String)
   fullName: CRMScript.NetServer.NSTicketInfo.SetTicketUrl(String)
   type: Method
-  summary: "\nA URL leading directly to the created request. This is a URL ment to be used by a Service user\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetTicketUrl(String ticketUrl)
     parameters:
     - id: ticketUrl
       type: CRMScript.Global.String
-      description: 
+      description: A URL leading directly to the created request. This is a URL meant to be used by a Service user
     return:
       type: CRMScript.Global.Void
   example: 
@@ -368,14 +368,14 @@ items:
   nameWithType: NSTicketInfo.SetTitle(String)
   fullName: CRMScript.NetServer.NSTicketInfo.SetTitle(String)
   type: Method
-  summary: "\nThe title/subject of the created ticket\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetTitle(String title)
     parameters:
     - id: title
       type: CRMScript.Global.String
-      description: 
+      description: The title/subject of the created ticket
     return:
       type: CRMScript.Global.Void
   example: 
