--- a/docs/api-reference/CRMScript.NetServer.NSTicketSummaryItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketSummaryItem.yml
@@ -6,12 +6,12 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSTicketSummaryItem.#ctor
   - CRMScript.NetServer.NSTicketSummaryItem.GetRegistered()
   - CRMScript.NetServer.NSTicketSummaryItem.GetTicketId()
   - CRMScript.NetServer.NSTicketSummaryItem.GetTicketStatus()
   - CRMScript.NetServer.NSTicketSummaryItem.GetTitle()
-  - CRMScript.NetServer.NSTicketSummaryItem.#ctor
-  - CRMScript.NetServer.NSTicketSummaryItem.SetRegistered()
+  - CRMScript.NetServer.NSTicketSummaryItem.SetRegistered(DateTime)
   - CRMScript.NetServer.NSTicketSummaryItem.SetTicketId(Integer)
   - CRMScript.NetServer.NSTicketSummaryItem.SetTicketStatus(Integer)
   - CRMScript.NetServer.NSTicketSummaryItem.SetTitle(String)
@@ -21,86 +21,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSTicketSummaryItem.GetRegistered()
-  commentId: M:CRMScript.NetServer.NSTicketSummaryItem.GetRegistered()
-  id: 'GetRegistered()'
-  so.intellisense: NSTicketSummaryItem.GetRegistered
-  langs:
-  - crmscript
-  name: 'GetRegistered()'
-  nameWithType: NSTicketSummaryItem.GetRegistered()
-  fullName: CRMScript.NetServer.NSTicketSummaryItem.GetRegistered()
-  type: Method
-  summary: "\nWhen the ticket was created.\n"
-  remarks: 
-  syntax: 
-    content: DateTime GetRegistered()
-    parameters: []
-    return:
-      type: CRMScript.Global.DateTime
-      description:
-  example: 
-  - "\n<pre><code>NSTicketSummaryItem thing;\nDateTime registered = thing.GetRegistered();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTicketSummaryItem.GetTicketId()
-  commentId: M:CRMScript.NetServer.NSTicketSummaryItem.GetTicketId()
-  id: 'GetTicketId()'
-  so.intellisense: NSTicketSummaryItem.GetTicketId
-  langs:
-  - crmscript
-  name: 'GetTicketId()'
-  nameWithType: NSTicketSummaryItem.GetTicketId()
-  fullName: CRMScript.NetServer.NSTicketSummaryItem.GetTicketId()
-  type: Method
-  summary: "\nThe primary key (auto-incremented)\n"
-  remarks: 
-  syntax: 
-    content: Integer GetTicketId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSTicketSummaryItem thing;\nInteger ticketId = thing.GetTicketId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTicketSummaryItem.GetTicketStatus()
-  commentId: M:CRMScript.NetServer.NSTicketSummaryItem.GetTicketStatus()
-  id: 'GetTicketStatus()'
-  so.intellisense: NSTicketSummaryItem.GetTicketStatus
-  langs:
-  - crmscript
-  name: 'GetTicketStatus()'
-  nameWithType: NSTicketSummaryItem.GetTicketStatus()
-  fullName: CRMScript.NetServer.NSTicketSummaryItem.GetTicketStatus()
-  type: Method
-  summary: "\nUser defined ticket status\n"
-  remarks: 
-  syntax: 
-    content: Integer GetTicketStatus()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSTicketSummaryItem thing;\nInteger ticketStatus = thing.GetTicketStatus();</code></pre>\n"
-- uid: CRMScript.NetServer.NSTicketSummaryItem.GetTitle()
-  commentId: M:CRMScript.NetServer.NSTicketSummaryItem.GetTitle()
-  id: 'GetTitle()'
-  so.intellisense: NSTicketSummaryItem.GetTitle
-  langs:
-  - crmscript
-  name: 'GetTitle()'
-  nameWithType: NSTicketSummaryItem.GetTitle()
-  fullName: CRMScript.NetServer.NSTicketSummaryItem.GetTitle()
-  type: Method
-  summary: "\nThe title of the ticket.\n"
-  remarks: 
-  syntax: 
-    content: String GetTitle()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSTicketSummaryItem thing;\nString title = thing.GetTitle();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketSummaryItem.#ctor
   commentId: M:CRMScript.NetServer.NSTicketSummaryItem.#ctor
   id: '#ctor'
@@ -116,21 +36,106 @@ items:
   syntax: 
     content: NSTicketSummaryItem
   example: 
-- uid: CRMScript.NetServer.NSTicketSummaryItem.SetRegistered()
-  commentId: M:CRMScript.NetServer.NSTicketSummaryItem.SetRegistered()
-  id: 'SetRegistered()'
+- uid: CRMScript.NetServer.NSTicketSummaryItem.GetRegistered()
+  commentId: M:CRMScript.NetServer.NSTicketSummaryItem.GetRegistered()
+  id: 'GetRegistered()'
+  so.intellisense: NSTicketSummaryItem.GetRegistered
+  langs:
+  - crmscript
+  name: 'GetRegistered()'
+  nameWithType: NSTicketSummaryItem.GetRegistered()
+  fullName: CRMScript.NetServer.NSTicketSummaryItem.GetRegistered()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: DateTime GetRegistered()
+    parameters: []
+    return:
+      type: CRMScript.Global.DateTime
+      description: When the ticket was created.
+  example: 
+  - "\n<pre><code>NSTicketSummaryItem thing;\nDateTime registered = thing.GetRegistered();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTicketSummaryItem.GetTicketId()
+  commentId: M:CRMScript.NetServer.NSTicketSummaryItem.GetTicketId()
+  id: 'GetTicketId()'
+  so.intellisense: NSTicketSummaryItem.GetTicketId
+  langs:
+  - crmscript
+  name: 'GetTicketId()'
+  nameWithType: NSTicketSummaryItem.GetTicketId()
+  fullName: CRMScript.NetServer.NSTicketSummaryItem.GetTicketId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetTicketId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The primary key (auto-incremented)
+  example: 
+  - "\n<pre><code>NSTicketSummaryItem thing;\nInteger ticketId = thing.GetTicketId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTicketSummaryItem.GetTicketStatus()
+  commentId: M:CRMScript.NetServer.NSTicketSummaryItem.GetTicketStatus()
+  id: 'GetTicketStatus()'
+  so.intellisense: NSTicketSummaryItem.GetTicketStatus
+  langs:
+  - crmscript
+  name: 'GetTicketStatus()'
+  nameWithType: NSTicketSummaryItem.GetTicketStatus()
+  fullName: CRMScript.NetServer.NSTicketSummaryItem.GetTicketStatus()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetTicketStatus()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: User-defined ticket status
+  example: 
+  - "\n<pre><code>NSTicketSummaryItem thing;\nInteger ticketStatus = thing.GetTicketStatus();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTicketSummaryItem.GetTitle()
+  commentId: M:CRMScript.NetServer.NSTicketSummaryItem.GetTitle()
+  id: 'GetTitle()'
+  so.intellisense: NSTicketSummaryItem.GetTitle
+  langs:
+  - crmscript
+  name: 'GetTitle()'
+  nameWithType: NSTicketSummaryItem.GetTitle()
+  fullName: CRMScript.NetServer.NSTicketSummaryItem.GetTitle()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetTitle()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The title of the ticket.
+  example: 
+  - "\n<pre><code>NSTicketSummaryItem thing;\nString title = thing.GetTitle();</code></pre>\n"
+- uid: CRMScript.NetServer.NSTicketSummaryItem.SetRegistered(DateTime)
+  commentId: M:CRMScript.NetServer.NSTicketSummaryItem.SetRegistered(DateTime)
+  id: 'SetRegistered(DateTime)'
   so.intellisense: NSTicketSummaryItem.SetRegistered
   langs:
   - crmscript
-  name: 'SetRegistered()'
-  nameWithType: NSTicketSummaryItem.SetRegistered()
-  fullName: CRMScript.NetServer.NSTicketSummaryItem.SetRegistered()
+  name: 'SetRegistered(DateTime)'
+  nameWithType: NSTicketSummaryItem.SetRegistered(DateTime)
+  fullName: CRMScript.NetServer.NSTicketSummaryItem.SetRegistered(DateTime)
   type: Method
-  summary: "\nWhen the ticket was created.\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetRegistered(DateTime registered)
     parameters:
+    - id: registered
+      type: CRMScript.Global.DateTime
+      description: When the ticket was created.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSTicketSummaryItem thing;\nDateTime registered;\nthing.SetRegistered(registered);</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketSummaryItem.SetTicketId(Integer)
@@ -143,14 +148,14 @@ items:
   nameWithType: NSTicketSummaryItem.SetTicketId(Integer)
   fullName: CRMScript.NetServer.NSTicketSummaryItem.SetTicketId(Integer)
   type: Method
-  summary: "\nThe primary key (auto-incremented)\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetTicketId(Integer ticketId)
     parameters:
     - id: ticketId
       type: CRMScript.Global.Integer
-      description: 
+      description: The primary key (auto-incremented)
     return:
       type: CRMScript.Global.Void
   example: 
@@ -165,14 +170,14 @@ items:
   nameWithType: NSTicketSummaryItem.SetTicketStatus(Integer)
   fullName: CRMScript.NetServer.NSTicketSummaryItem.SetTicketStatus(Integer)
   type: Method
-  summary: "\nUser defined ticket status\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetTicketStatus(Integer ticketStatus)
     parameters:
     - id: ticketStatus
       type: CRMScript.Global.Integer
-      description: 
+      description: User defined ticket status
     return:
       type: CRMScript.Global.Void
   example: 
@@ -187,14 +192,14 @@ items:
   nameWithType: NSTicketSummaryItem.SetTitle(String)
   fullName: CRMScript.NetServer.NSTicketSummaryItem.SetTitle(String)
   type: Method
-  summary: "\nThe title of the ticket.\n"
+  summary: "\n.\n"
   remarks: 
   syntax: 
     content: Void SetTitle(String title)
     parameters:
     - id: title
       type: CRMScript.Global.String
-      description: 
+      description: The title of the ticket
     return:
       type: CRMScript.Global.Void
   example: 
