--- a/docs/api-reference/CRMScript.NetServer.NSUntrustedCredentials.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUntrustedCredentials.yml
@@ -6,145 +6,25 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSUntrustedCredentials.#ctor
   - CRMScript.NetServer.NSUntrustedCredentials.GetComment()
   - CRMScript.NetServer.NSUntrustedCredentials.GetIsActive()
   - CRMScript.NetServer.NSUntrustedCredentials.GetPublicValue()
   - CRMScript.NetServer.NSUntrustedCredentials.GetSecretValue()
   - CRMScript.NetServer.NSUntrustedCredentials.GetValidFrom()
   - CRMScript.NetServer.NSUntrustedCredentials.GetValidTo()
-  - CRMScript.NetServer.NSUntrustedCredentials.#ctor
   - CRMScript.NetServer.NSUntrustedCredentials.SetComment(String)
   - CRMScript.NetServer.NSUntrustedCredentials.SetIsActive(Bool)
   - CRMScript.NetServer.NSUntrustedCredentials.SetPublicValue(String)
   - CRMScript.NetServer.NSUntrustedCredentials.SetSecretValue(String)
-  - CRMScript.NetServer.NSUntrustedCredentials.SetValidFrom()
-  - CRMScript.NetServer.NSUntrustedCredentials.SetValidTo()
+  - CRMScript.NetServer.NSUntrustedCredentials.SetValidFrom(DateTime)
+  - CRMScript.NetServer.NSUntrustedCredentials.SetValidTo(DateTime)
   name: NSUntrustedCredentials
   nameWithType: NSUntrustedCredentials
   fullName: CRMScript.NetServer.NSUntrustedCredentials
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSUntrustedCredentials.GetComment()
-  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.GetComment()
-  id: 'GetComment()'
-  so.intellisense: NSUntrustedCredentials.GetComment
-  langs:
-  - crmscript
-  name: 'GetComment()'
-  nameWithType: NSUntrustedCredentials.GetComment()
-  fullName: CRMScript.NetServer.NSUntrustedCredentials.GetComment()
-  type: Method
-  summary: "\nDescription of credentials. Max 255 characters.\n"
-  remarks: 
-  syntax: 
-    content: String GetComment()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSUntrustedCredentials thing;\nString comment = thing.GetComment();</code></pre>\n"
-- uid: CRMScript.NetServer.NSUntrustedCredentials.GetIsActive()
-  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.GetIsActive()
-  id: 'GetIsActive()'
-  so.intellisense: NSUntrustedCredentials.GetIsActive
-  langs:
-  - crmscript
-  name: 'GetIsActive()'
-  nameWithType: NSUntrustedCredentials.GetIsActive()
-  fullName: CRMScript.NetServer.NSUntrustedCredentials.GetIsActive()
-  type: Method
-  summary: "\nIs this credentials currently active.\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIsActive()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSUntrustedCredentials thing;\nBool isActive = thing.GetIsActive();</code></pre>\n"
-- uid: CRMScript.NetServer.NSUntrustedCredentials.GetPublicValue()
-  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.GetPublicValue()
-  id: 'GetPublicValue()'
-  so.intellisense: NSUntrustedCredentials.GetPublicValue
-  langs:
-  - crmscript
-  name: 'GetPublicValue()'
-  nameWithType: NSUntrustedCredentials.GetPublicValue()
-  fullName: CRMScript.NetServer.NSUntrustedCredentials.GetPublicValue()
-  type: Method
-  summary: "\nData stored unencrypted in the db.  Typically server and or username. Max 238 characters.\n"
-  remarks: 
-  syntax: 
-    content: String GetPublicValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSUntrustedCredentials thing;\nString publicValue = thing.GetPublicValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSUntrustedCredentials.GetSecretValue()
-  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.GetSecretValue()
-  id: 'GetSecretValue()'
-  so.intellisense: NSUntrustedCredentials.GetSecretValue
-  langs:
-  - crmscript
-  name: 'GetSecretValue()'
-  nameWithType: NSUntrustedCredentials.GetSecretValue()
-  fullName: CRMScript.NetServer.NSUntrustedCredentials.GetSecretValue()
-  type: Method
-  summary: "\nData stored encrypted in the db. Typically a password. Max 70 characters.\n"
-  remarks: 
-  syntax: 
-    content: String GetSecretValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSUntrustedCredentials thing;\nString secretValue = thing.GetSecretValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSUntrustedCredentials.GetValidFrom()
-  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.GetValidFrom()
-  id: 'GetValidFrom()'
-  so.intellisense: NSUntrustedCredentials.GetValidFrom
-  langs:
-  - crmscript
-  name: 'GetValidFrom()'
-  nameWithType: NSUntrustedCredentials.GetValidFrom()
-  fullName: CRMScript.NetServer.NSUntrustedCredentials.GetValidFrom()
-  type: Method
-  summary: "\nCredentials are valid from this date.\n"
-  remarks: 
-  syntax: 
-    content: DateTime GetValidFrom()
-    parameters: []
-    return:
-      type: CRMScript.Global.DateTime
-      description:
-  example: 
-  - "\n<pre><code>NSUntrustedCredentials thing;\nDateTime validFrom = thing.GetValidFrom();</code></pre>\n"
-- uid: CRMScript.NetServer.NSUntrustedCredentials.GetValidTo()
-  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.GetValidTo()
-  id: 'GetValidTo()'
-  so.intellisense: NSUntrustedCredentials.GetValidTo
-  langs:
-  - crmscript
-  name: 'GetValidTo()'
-  nameWithType: NSUntrustedCredentials.GetValidTo()
-  fullName: CRMScript.NetServer.NSUntrustedCredentials.GetValidTo()
-  type: Method
-  summary: "\nCredentials are valid to this date.\n"
-  remarks: 
-  syntax: 
-    content: DateTime GetValidTo()
-    parameters: []
-    return:
-      type: CRMScript.Global.DateTime
-      description:
-  example: 
-  - "\n<pre><code>NSUntrustedCredentials thing;\nDateTime validTo = thing.GetValidTo();</code></pre>\n"
 - uid: CRMScript.NetServer.NSUntrustedCredentials.#ctor
   commentId: M:CRMScript.NetServer.NSUntrustedCredentials.#ctor
   id: '#ctor'
@@ -160,6 +40,126 @@ items:
   syntax: 
     content: NSUntrustedCredentials
   example: 
+- uid: CRMScript.NetServer.NSUntrustedCredentials.GetComment()
+  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.GetComment()
+  id: 'GetComment()'
+  so.intellisense: NSUntrustedCredentials.GetComment
+  langs:
+  - crmscript
+  name: 'GetComment()'
+  nameWithType: NSUntrustedCredentials.GetComment()
+  fullName: CRMScript.NetServer.NSUntrustedCredentials.GetComment()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetComment()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Description of credentials. Max 255 characters.
+  example: 
+  - "\n<pre><code>NSUntrustedCredentials thing;\nString comment = thing.GetComment();</code></pre>\n"
+- uid: CRMScript.NetServer.NSUntrustedCredentials.GetIsActive()
+  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.GetIsActive()
+  id: 'GetIsActive()'
+  so.intellisense: NSUntrustedCredentials.GetIsActive
+  langs:
+  - crmscript
+  name: 'GetIsActive()'
+  nameWithType: NSUntrustedCredentials.GetIsActive()
+  fullName: CRMScript.NetServer.NSUntrustedCredentials.GetIsActive()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Bool GetIsActive()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Is this credentials currently active.
+  example: 
+  - "\n<pre><code>NSUntrustedCredentials thing;\nBool isActive = thing.GetIsActive();</code></pre>\n"
+- uid: CRMScript.NetServer.NSUntrustedCredentials.GetPublicValue()
+  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.GetPublicValue()
+  id: 'GetPublicValue()'
+  so.intellisense: NSUntrustedCredentials.GetPublicValue
+  langs:
+  - crmscript
+  name: 'GetPublicValue()'
+  nameWithType: NSUntrustedCredentials.GetPublicValue()
+  fullName: CRMScript.NetServer.NSUntrustedCredentials.GetPublicValue()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetPublicValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Data stored unencrypted in the db.  Typically server and or username. Max 238 characters.
+  example: 
+  - "\n<pre><code>NSUntrustedCredentials thing;\nString publicValue = thing.GetPublicValue();</code></pre>\n"
+- uid: CRMScript.NetServer.NSUntrustedCredentials.GetSecretValue()
+  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.GetSecretValue()
+  id: 'GetSecretValue()'
+  so.intellisense: NSUntrustedCredentials.GetSecretValue
+  langs:
+  - crmscript
+  name: 'GetSecretValue()'
+  nameWithType: NSUntrustedCredentials.GetSecretValue()
+  fullName: CRMScript.NetServer.NSUntrustedCredentials.GetSecretValue()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetSecretValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Data stored encrypted in the db. Typically a password. Max 70 characters.
+  example: 
+  - "\n<pre><code>NSUntrustedCredentials thing;\nString secretValue = thing.GetSecretValue();</code></pre>\n"
+- uid: CRMScript.NetServer.NSUntrustedCredentials.GetValidFrom()
+  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.GetValidFrom()
+  id: 'GetValidFrom()'
+  so.intellisense: NSUntrustedCredentials.GetValidFrom
+  langs:
+  - crmscript
+  name: 'GetValidFrom()'
+  nameWithType: NSUntrustedCredentials.GetValidFrom()
+  fullName: CRMScript.NetServer.NSUntrustedCredentials.GetValidFrom()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: DateTime GetValidFrom()
+    parameters: []
+    return:
+      type: CRMScript.Global.DateTime
+      description: Credentials are valid from this date.
+  example: 
+  - "\n<pre><code>NSUntrustedCredentials thing;\nDateTime validFrom = thing.GetValidFrom();</code></pre>\n"
+- uid: CRMScript.NetServer.NSUntrustedCredentials.GetValidTo()
+  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.GetValidTo()
+  id: 'GetValidTo()'
+  so.intellisense: NSUntrustedCredentials.GetValidTo
+  langs:
+  - crmscript
+  name: 'GetValidTo()'
+  nameWithType: NSUntrustedCredentials.GetValidTo()
+  fullName: CRMScript.NetServer.NSUntrustedCredentials.GetValidTo()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: DateTime GetValidTo()
+    parameters: []
+    return:
+      type: CRMScript.Global.DateTime
+      description: Credentials are valid to this date.
+  example:  
+  - "\n<pre><code>NSUntrustedCredentials thing;\nDateTime validTo = thing.GetValidTo();</code></pre>\n"
 - uid: CRMScript.NetServer.NSUntrustedCredentials.SetComment(String)
   commentId: M:CRMScript.NetServer.NSUntrustedCredentials.SetComment(String)
   id: 'SetComment(String)'
@@ -170,14 +170,14 @@ items:
   nameWithType: NSUntrustedCredentials.SetComment(String)
   fullName: CRMScript.NetServer.NSUntrustedCredentials.SetComment(String)
   type: Method
-  summary: "\nDescription of credentials. Max 255 characters.\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetComment(String comment)
     parameters:
     - id: comment
       type: CRMScript.Global.String
-      description: 
+      description:  Description of credentials. Max 255 characters.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -192,14 +192,14 @@ items:
   nameWithType: NSUntrustedCredentials.SetIsActive(Bool)
   fullName: CRMScript.NetServer.NSUntrustedCredentials.SetIsActive(Bool)
   type: Method
-  summary: "\nIs this credentials currently active.\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetIsActive(Bool isActive)
     parameters:
     - id: isActive
       type: CRMScript.Global.Bool
-      description: 
+      description: Is this credentials currently active.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -214,14 +214,14 @@ items:
   nameWithType: NSUntrustedCredentials.SetPublicValue(String)
   fullName: CRMScript.NetServer.NSUntrustedCredentials.SetPublicValue(String)
   type: Method
-  summary: "\nData stored unencrypted in the db.  Typically server and or username. Max 238 characters.\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetPublicValue(String publicValue)
     parameters:
     - id: publicValue
       type: CRMScript.Global.String
-      description: 
+      description: Data stored unencrypted in the db.  Typically server and or username. Max 238 characters.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -236,50 +236,60 @@ items:
   nameWithType: NSUntrustedCredentials.SetSecretValue(String)
   fullName: CRMScript.NetServer.NSUntrustedCredentials.SetSecretValue(String)
   type: Method
-  summary: "\nData stored encrypted in the db. Typically a password. Max 70 characters.\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetSecretValue(String secretValue)
     parameters:
     - id: secretValue
       type: CRMScript.Global.String
-      description: 
+      description:  Data stored encrypted in the db. Typically a password. Max 70 characters.
     return:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSUntrustedCredentials thing;\nString secretValue;\nthing.SetSecretValue(secretValue);</code></pre>\n"
-- uid: CRMScript.NetServer.NSUntrustedCredentials.SetValidFrom()
-  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.SetValidFrom()
-  id: 'SetValidFrom()'
+- uid: CRMScript.NetServer.NSUntrustedCredentials.SetValidFrom(DateTime)
+  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.SetValidFrom(DateTime)
+  id: 'SetValidFrom(DateTime)'
   so.intellisense: NSUntrustedCredentials.SetValidFrom
   langs:
   - crmscript
-  name: 'SetValidFrom()'
-  nameWithType: NSUntrustedCredentials.SetValidFrom()
-  fullName: CRMScript.NetServer.NSUntrustedCredentials.SetValidFrom()
+  name: 'SetValidFrom(DateTime)'
+  nameWithType: NSUntrustedCredentials.SetValidFrom(DateTime)
+  fullName: CRMScript.NetServer.NSUntrustedCredentials.SetValidFrom(DateTime)
   type: Method
-  summary: "\nCredentials are valid from this date.\n"
+  summary: 
   remarks: 
   syntax: 
     content: Void SetValidFrom(DateTime validFrom)
     parameters:
+    - id: validFrom
+      type: CRMScript.Global.DateTime
+      description: Credentials are valid from this date.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSUntrustedCredentials thing;\nDateTime validFrom;\nthing.SetValidFrom(validFrom);</code></pre>\n"
-- uid: CRMScript.NetServer.NSUntrustedCredentials.SetValidTo()
-  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.SetValidTo()
-  id: 'SetValidTo()'
+- uid: CRMScript.NetServer.NSUntrustedCredentials.SetValidTo(DateTime)
+  commentId: M:CRMScript.NetServer.NSUntrustedCredentials.SetValidTo(DateTime)
+  id: 'SetValidTo(DateTime)'
   so.intellisense: NSUntrustedCredentials.SetValidTo
   langs:
   - crmscript
-  name: 'SetValidTo()'
-  nameWithType: NSUntrustedCredentials.SetValidTo()
-  fullName: CRMScript.NetServer.NSUntrustedCredentials.SetValidTo()
+  name: 'SetValidTo(DateTime)'
+  nameWithType: NSUntrustedCredentials.SetValidTo(DateTime)
+  fullName: CRMScript.NetServer.NSUntrustedCredentials.SetValidTo(DateTime)
   type: Method
   summary: "\nCredentials are valid to this date.\n"
   remarks: 
   syntax: 
     content: Void SetValidTo(DateTime validTo)
     parameters:
+    - id: validTo
+      type: CRMScript.Global.DateTime
+      description: Credentials are valid to this date.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSUntrustedCredentials thing;\nDateTime validTo;\nthing.SetValidTo(validTo);</code></pre>\n"
 references:
